--- a/Go/Documentación/12.BasesDatos.md
+++ b/Go/Documentación/12.BasesDatos.md
@@ -2,16 +2,16 @@
 
 ## 12.1. Conexión a Bases de Datos
 
-- **Conexión con Bases de Datos SQL:**
+- ### Conexión con Bases de Datos SQL
 
-  Para conectar con bases de datos SQL, se utilizan paquetes como database/sql junto con drivers específicos para cada tipo de base de datos, como PostgreSQL, MySQL, o SQLite.
+  Para conectar con bases de datos SQL, se utilizan paquetes como `database/sql` junto con drivers específicos para cada tipo de base de datos, como PostgreSQL, MySQL, o SQLite.
 
   ```go
   package main
 
   import (
       "database/sql"
-      _ "github.com/lib/pq"
+      "github.com/lib/pq"
       "log"
   )
 
@@ -28,7 +28,7 @@
 
   ```
 
-- **Conexión a una base de datos NoSQL:**
+- ### Conexión a una base de datos NoSQL
 
   La conexión a bases de datos NoSQL varía según el tipo de base de datos (MongoDB, Cassandra, etc.). Generalmente, se utiliza el driver específico proporcionado por la base de datos.
 
@@ -62,7 +62,7 @@
 
 Las consultas SQL permiten interactuar con bases de datos relacionales. A continuación, se presentan ejemplos de consultas comunes.
 
-- SELECT: Para seleccionar datos de una o más tablas.
+- ### SELECT
 
   ```go
   rows, err := db.Query("SELECT id, name FROM users")
@@ -83,7 +83,7 @@ Las consultas SQL permiten interactuar con bases de datos relacionales. A contin
 
   ```
 
-- INSERT: Para insertar nuevos registros en una tabla.
+- ### INSERT
 
   ```go
   _, err := db.Exec("INSERT INTO users (name) VALUES ($1)", "John Doe")
@@ -93,7 +93,7 @@ Las consultas SQL permiten interactuar con bases de datos relacionales. A contin
 
   ```
 
-- UPDATE: Para modificar registros existentes.
+- ### UPDATE
 
   ```go
   _, err := db.Exec("UPDATE users SET name = $1 WHERE id = $2", "Jane Doe", 1)
@@ -103,7 +103,7 @@ Las consultas SQL permiten interactuar con bases de datos relacionales. A contin
 
   ```
 
-- DELETE: Para eliminar registros.
+- ### DELETE
 
   ```go
   _, err := db.Exec("DELETE FROM users WHERE id = $1", 1)
@@ -113,7 +113,7 @@ Las consultas SQL permiten interactuar con bases de datos relacionales. A contin
 
   ```
 
-- JOIN: Para combinar filas de dos o más tablas.
+- ### JOIN
 
   ```go
   rows, err := db.Query(`
@@ -177,20 +177,22 @@ func main() {
 
 ## 12.4. Bases de Datos Relacionales vs. NoSQL
 
-- **Bases de Datos Relacionales:**
+- ### Bases de Datos Relacionales
 
   Las bases de datos relacionales utilizan tablas y relaciones entre ellas. Son ideales para aplicaciones que requieren transacciones complejas y un esquema de datos fijo.
 
-  - Casos de Uso:
+  - **Casos de Uso:**
+
     - Sistemas bancarios
     - Aplicaciones empresariales
     - Sistemas de gestión de contenido
 
-- **Bases de Datos NoSQL:**
+- ### Bases de Datos NoSQL
 
   Las bases de datos NoSQL son más flexibles en cuanto a esquemas de datos y son adecuadas para aplicaciones que manejan grandes volúmenes de datos no estructurados o semi-estructurados.
 
-  - Casos de Uso:
+  - **Casos de Uso:**
+
     - Aplicaciones web en tiempo real
     - Big Data
     - Aplicaciones de redes sociales
