--- a/Go/Documentación/13.Redes &Comunicación.md
+++ b/Go/Documentación/13.Redes &Comunicación.md
@@ -2,16 +2,16 @@
 
 La comunicación en red es un aspecto fundamental en el desarrollo de aplicaciones modernas. En Go, se pueden manejar diversos protocolos de comunicación, como HTTP/HTTPS, sockets, APIs RESTful y WebSocket. Estos son esenciales para la interacción entre sistemas y servicios.
 
-- net: Paquete principal para trabajar con sockets y protocolos de red.
-- net/http: Paquete para crear servidores HTTP y clientes HTTP.
+- **`net`:** Paquete principal para trabajar con sockets y protocolos de red.
+- **`net/http`:** Paquete para crear servidores HTTP y clientes HTTP.
 
 ## 13.1. Protocolo HTTP/HTTPS
 
-- **Peticiones HTTP/HTTPS:**
+- ### Peticiones HTTP/HTTPS
 
   Go proporciona el paquete net/http para realizar y manejar peticiones HTTP/HTTPS. A continuación se muestran ejemplos de cómo realizar peticiones GET, POST, PUT y DELETE.
 
-  - GET:
+  - **GET:**
 
   ```go
   package main
@@ -42,7 +42,7 @@ La comunicación en red es un aspecto fundamental en el desarrollo de aplicacion
 
   ```
 
-  - POST:
+  - **POST:**
 
   ```go
   package main
@@ -75,7 +75,7 @@ La comunicación en red es un aspecto fundamental en el desarrollo de aplicacion
 
   ```
 
-  -PUT
+  - **PUT**
 
   ```go
   package main
@@ -115,7 +115,7 @@ La comunicación en red es un aspecto fundamental en el desarrollo de aplicacion
 
   ```
 
-  - DELETE:
+  - **DELETE:**
 
   ```go
   package main
@@ -152,7 +152,7 @@ La comunicación en red es un aspecto fundamental en el desarrollo de aplicacion
 
   ```
 
-- **Servidor HTTP básico en Go:**
+- ### Servidor HTTP básico en Go
 
   ```go
   package main
@@ -181,7 +181,7 @@ La comunicación en red es un aspecto fundamental en el desarrollo de aplicacion
 
 La programación de sockets permite la comunicación de red de bajo nivel entre sistemas. Go proporciona el paquete net para trabajar con sockets.
 
-- **Servidor TCP:**
+- ### Servidor TCP
 
   ```go
   package main
@@ -222,7 +222,7 @@ La programación de sockets permite la comunicación de red de bajo nivel entre 
 
   ```
 
-- **Cliente TCP:**
+- ### Cliente TCP
 
   ```go
   package main
@@ -252,7 +252,7 @@ La programación de sockets permite la comunicación de red de bajo nivel entre 
 
 ## 13.3. APIs RESTful
 
-Interactuar con APIs RESTful implica enviar solicitudes HTTP y manejar respuestas JSON. A menudo, se utiliza el paquete encoding/json para trabajar con JSON en Go.
+Interactuar con APIs RESTful implica enviar solicitudes HTTP y manejar respuestas JSON. A menudo, se utiliza el paquete `encoding/json` para trabajar con JSON en Go.
 
 ```go
 package main
@@ -298,9 +298,9 @@ func main() {
 
 ## 13.4. Protocolo WebSocket
 
-WebSocket permite la comunicación bidireccional en tiempo real entre cliente y servidor. Go proporciona el paquete golang.org/x/net/websocket para trabajar con WebSockets.
+WebSocket permite la comunicación bidireccional en tiempo real entre cliente y servidor. Go proporciona el paquete `golang.org/x/net/websocket` para trabajar con WebSockets.
 
-- **Servidor WebSocket:**
+- ### Servidor WebSocket
 
   ```go
   package main
@@ -343,7 +343,7 @@ WebSocket permite la comunicación bidireccional en tiempo real entre cliente y 
 
   ```
 
-- **Cliente WebSocket:**\
+- ### Cliente WebSocket
 
   ```go
   package main
