--- a/Go/Documentación/14.Testeo&Depuración.md
+++ b/Go/Documentación/14.Testeo&Depuración.md
@@ -4,9 +4,9 @@
 
 En Go, el testeo unitario es fundamental para garantizar que las funciones y métodos se comporten como se espera. Go proporciona un paquete estándar llamado testing para crear pruebas unitarias.
 
-- **Escribir pruebas unitarias:**
+- ### Escribir pruebas unitarias
 
-  Para escribir pruebas unitarias en Go, se crea un archivo que termina en \_test.go y se definen funciones de prueba que comienzan con Test. Aquí hay un ejemplo básico:
+  Para escribir pruebas unitarias en Go, se crea un archivo que termina en `_test.go` y se definen funciones de prueba que comienzan con Test. Aquí hay un ejemplo básico:
 
   ```go
   package main
@@ -29,14 +29,14 @@ En Go, el testeo unitario es fundamental para garantizar que las funciones y mé
 
   ```
 
-  - import "testing": Importa el paquete testing para utilizar las funcionalidades de pruebas.
-  - func TestSuma(t \*testing.T): Define una función de prueba para la función Suma. Utiliza el objeto t para reportar errores si la prueba falla
+  - **`import "testing"`:** Importa el paquete testing para utilizar las funcionalidades de pruebas.
+  - **`func TestSuma(t *testing.T)`:** Define una función de prueba para la función Suma. Utiliza el objeto t para reportar errores si la prueba falla
 
-- **Ejecutar pruebas:**
+- ### Ejecutar pruebas
 
-```sh
-go test
-```
+  ```sh
+  go test
+  ```
 
 ---
 
@@ -44,15 +44,15 @@ go test
 
 El testing automatizado en Go permite realizar pruebas de manera continua para asegurar la calidad del código. El paquete testing también soporta pruebas automatizadas que se integran con herramientas de CI/CD.
 
-- **Pruebas con cobertura de código:**
+- ### Pruebas con cobertura de código
 
-```sh
-go test -cover
-```
+  ```sh
+  go test -cover
+  ```
 
-- **Herramientas de testing:**
+- ### Herramientas de testing
 
-  Go tiene varias herramientas y bibliotecas para facilitar las pruebas automatizadas, como Testify para afirmaciones más detalladas y GoMock para mocks.
+  Go tiene varias herramientas y bibliotecas para facilitar las pruebas automatizadas, como `Testify` para afirmaciones más detalladas y `GoMock` para mocks.
 
   ```go
   // Ejemplo de uso de Testify
@@ -77,9 +77,9 @@ go test -cover
 
 La depuración es el proceso de encontrar y corregir errores en el código. Go proporciona varias herramientas y técnicas para depurar programas.
 
-- **Uso de fmt.Println y log:**
+- ### Uso de fmt.Println y log
 
-  Para depurar rápidamente, puedes usar fmt.Println o log para imprimir valores y mensajes en la consola.
+  Para depurar rápidamente, puedes usar `fmt.Println` o `log` para imprimir valores y mensajes en la consola.
 
   ```go
   fmt.Println("Variable x:", x)
@@ -87,21 +87,21 @@ La depuración es el proceso de encontrar y corregir errores en el código. Go p
 
   ```
 
-- **Uso de herramientas de depuración:**
+- ### Uso de herramientas de depuración
 
-- Delve: Delve es un depurador para Go. Puedes instalarlo y usarlo para depurar programas Go desde la línea de comandos.
+  - **Delve:** Delve es un depurador para Go. Puedes instalarlo y usarlo para depurar programas Go desde la línea de comandos.
 
-```sh
-go install github.com/go-delve/delve/cmd/dlv@latest
+    ```sh
+    go install github.com/go-delve/delve/cmd/dlv@latest
 
-```
+    ```
 
-- Para iniciar una sesión de depuración con Delve:
+  - Para iniciar una sesión de depuración con Delve:
 
-```sh
-dlv debug
+    ```sh
+    dlv debug
 
-```
+    ```
 
 ---
 
@@ -109,46 +109,46 @@ dlv debug
 
 El uso de registros o logs es esencial para rastrear errores y eventos en una aplicación en producción.
 
-- **Uso del paquete log:**
+### Uso del paquete log
 
-  El paquete log proporciona una manera básica de registrar mensajes en la salida estándar o en archivos.
+El paquete `log` proporciona una manera básica de registrar mensajes en la salida estándar o en archivos.
 
-  ```go
-  package main
+```go
+package main
 
-  import (
-      "log"
-      "os"
-  )
+import (
+    "log"
+    "os"
+)
 
-  func main() {
-      file, err := os.Create("log.txt")
-      if err != nil {
-          log.Fatal(err)
-      }
-      defer file.Close()
+func main() {
+    file, err := os.Create("log.txt")
+    if err != nil {
+        log.Fatal(err)
+    }
+    defer file.Close()
 
-      log.SetOutput(file)
-      log.Println("Este es un mensaje de log")
-  }
+    log.SetOutput(file)
+    log.Println("Este es un mensaje de log")
+}
 
-  ```
+```
 
-- **Loggers avanzados:**
+### Loggers avanzados
 
-  Puedes usar bibliotecas avanzadas como logrus o zap para un control más detallado y estructurado de los registros.
+Puedes usar bibliotecas avanzadas como `logrus` o `zap` para un control más detallado y estructurado de los registros.
 
-  ```go
-  import (
-      "github.com/sirupsen/logrus"
-  )
+```go
+import (
+    "github.com/sirupsen/logrus"
+)
 
-  func main() {
-      log := logrus.New()
-      log.Info("Este es un mensaje de log con Logrus")
-  }
+func main() {
+    log := logrus.New()
+    log.Info("Este es un mensaje de log con Logrus")
+}
 
-  ```
+```
 
 ---
 
@@ -156,9 +156,9 @@ El uso de registros o logs es esencial para rastrear errores y eventos en una ap
 
 El benchmarking en Go permite medir el rendimiento de funciones y optimizar el código. El paquete testing también soporta pruebas de benchmark que ayudan a identificar cuellos de botella en el código.
 
-- **Escribir benchmarks:**
+- ### Escribir benchmarks
 
-  Los benchmarks en Go se escriben en archivos \_test.go y siguen una convención similar a las pruebas unitarias, pero las funciones deben comenzar con Benchmark.
+  Los benchmarks en Go se escriben en archivos `_test.go` y siguen una convención similar a las pruebas unitarias, pero las funciones deben comenzar con Benchmark.
 
   ```go
   package main
@@ -179,13 +179,13 @@ El benchmarking en Go permite medir el rendimiento de funciones y optimizar el c
 
   ```
 
-  - func BenchmarkSuma(b \*testing.B): Define una función de benchmark para la función Suma. El ciclo for se ejecuta b.N veces, donde b.N es el número de iteraciones determinadas por el framework de pruebas para obtener una medición precisa.
+  - `func BenchmarkSuma(b *testing.B)`: Define una función de benchmark para la función Suma. El ciclo for se ejecuta b.N veces, donde b.N es el número de iteraciones determinadas por el framework de pruebas para obtener una medición precisa.
 
-- **Ejecutar benchmarks:**
+- ### Ejecutar benchmarks
 
-```sh
-go test -bench=.
+  ```sh
+  go test -bench=.
 
-```
+  ```
 
-Esto ejecutará todos los benchmarks en el archivo de prueba y mostrará los resultados de tiempo de ejecución en nanosegundos por operación.
+  Esto ejecutará todos los benchmarks en el archivo de prueba y mostrará los resultados de tiempo de ejecución en nanosegundos por operación.
