--- a/Go/Documentación/15.Frameworks&Librerías.md
+++ b/Go/Documentación/15.Frameworks&Librerías.md
@@ -2,60 +2,60 @@
 
 ## 15.1. Uso de Librerías
 
-En Go, la integración de bibliotecas de terceros es una práctica común para extender las capacidades del lenguaje y agilizar el desarrollo. El gestor de dependencias de Go, go mod, facilita la gestión de librerías externas y versiones.
+En Go, la integración de bibliotecas de terceros es una práctica común para extender las capacidades del lenguaje y agilizar el desarrollo. El gestor de dependencias de Go, `go mod`, facilita la gestión de librerías externas y versiones.
 
-- **go mod: Gestión de Dependencias**
+- ### go mod: Gestión de Dependencias
 
-  El comando go mod es la herramienta estándar en Go para gestionar dependencias. Ayuda a controlar qué versiones de las bibliotecas externas se usan y asegura que el código sea reproducible y fácil de compartir.
+  El comando `go mod` es la herramienta estándar en Go para gestionar dependencias. Ayuda a controlar qué versiones de las bibliotecas externas se usan y asegura que el código sea reproducible y fácil de compartir.
 
-- Inicializar un módulo Go:
+  - **Inicializar un módulo Go:**
 
-  Para empezar a usar go mod, primero debes inicializar tu proyecto como un módulo de Go. Esto se hace con el comando:
+    Para empezar a usar `go mod`, primero debes inicializar tu proyecto como un módulo de Go. Esto se hace con el comando:
 
-```sh
-go mod init nombre-del-proyecto
+    ```sh
+    go mod init nombre-del-proyecto
 
-```
+    ```
 
-Este comando genera un archivo go.mod que registra las dependencias y las versiones de las bibliotecas que el proyecto utilizará.
+    Este comando genera un archivo `go.mod` que registra las dependencias y las versiones de las bibliotecas que el proyecto utilizará.
 
-- Agregar una dependencia:
+  - **Agregar una dependencia:**
 
-  Cuando quieras agregar una librería de terceros, usa go get. Esto descarga el paquete y lo añade automáticamente al archivo go.mod.
+    Cuando quieras agregar una librería de terceros, usa `go ge`t. Esto descarga el paquete y lo añade automáticamente al archivo `go.mod`.
 
-```sh
-go get github.com/gin-gonic/gin
+    ```sh
+    go get github.com/gin-gonic/gin
 
-```
+    ```
 
-La línea correspondiente a esta dependencia se agregará al archivo go.mod con la versión adecuada. Además, go.sum se crea para almacenar los checksums de las dependencias, asegurando la integridad.
+    La línea correspondiente a esta dependencia se agregará al archivo `go.mod` con la versión adecuada. Además, `go.sum` se crea para almacenar los checksums de las dependencias, asegurando la integridad.
 
-- Actualizar dependencias:
+  - **Actualizar dependencias:**
 
-  Para actualizar las versiones de las dependencias a sus últimas versiones compatibles, ejecuta:
+    Para actualizar las versiones de las dependencias a sus últimas versiones compatibles, ejecuta:
 
-```sh
-go get -u
+    ```sh
+    go get -u
 
-```
+    ```
 
-- También puedes especificar una dependencia particular para actualizar:
+  - También puedes especificar una dependencia particular para actualizar:
 
-```sh
-go get -u github.com/gin-gonic/gin
+    ```sh
+    go get -u github.com/gin-gonic/gin
 
-```
+    ```
 
-- Remover dependencias no utilizadas:
+  - Remover dependencias no utilizadas:
 
-  Si eliminaste importaciones de tu código pero siguen apareciendo en go.mod, puedes ejecutar:
+    Si eliminaste importaciones de tu código pero siguen apareciendo en `go.mod`, puedes ejecutar:
 
-```sh
-go mod tidy
+    ```sh
+    go mod tidy
 
-```
+    ```
 
-Este comando elimina las dependencias que ya no se utilizan, manteniendo limpio el archivo go.mod.
+    Este comando elimina las dependencias que ya no se utilizan, manteniendo limpio el archivo `go.mod`.
 
 ---
 
@@ -63,7 +63,7 @@ Este comando elimina las dependencias que ya no se utilizan, manteniendo limpio 
 
 Go tiene varios frameworks web que facilitan la creación de aplicaciones web.
 
-- **Gin:**
+- ### Gin
 
   Gin es un framework ligero y rápido que facilita la creación de APIs RESTful.
 
@@ -82,7 +82,7 @@ Go tiene varios frameworks web que facilitan la creación de aplicaciones web.
 
   ```
 
-- **Echo:**
+- ### Echo
 
   Otro framework web popular por su simplicidad y rendimiento es Echo.
 
@@ -110,7 +110,7 @@ Go tiene varios frameworks web que facilitan la creación de aplicaciones web.
 
 Go también tiene varias bibliotecas para facilitar las pruebas unitarias y de integración.
 
-- **Testify:**
+- ### Testify
 
   Testify proporciona una API sencilla para realizar afirmaciones y mocks en las pruebas.
 
@@ -129,7 +129,7 @@ Go también tiene varias bibliotecas para facilitar las pruebas unitarias y de i
   }
   ```
 
-- **Ginkgo y Gomega:**
+- ### Ginkgo y Gomega
 
   Estos frameworks proporcionan una forma más orientada a BDD (Behavior Driven Development) para escribir pruebas en Go.
 
@@ -153,34 +153,34 @@ Go también tiene varias bibliotecas para facilitar las pruebas unitarias y de i
 
 ## 15.4. Otras Librerías
 
-- **Frameworks para Desarrollo de Microservicios**
+- ### Frameworks para Desarrollo de Microservicios
 
-  - Go Kit: Un framework para construir aplicaciones basadas en microservicios con soporte para transporte, middlewares y manejo de errores.
-  - Micro: Un ecosistema completo para desarrollar microservicios. Ofrece un conjunto de herramientas como gestión de APIs, registros y balanceo de carga.
-  - GRPC: Aunque no es un framework en sí, gRPC es un sistema de RPC (Remote Procedure Call) que permite la comunicación eficiente entre microservicios utilizando Protocol Buffers.
+  - **Go Kit:** Un framework para construir aplicaciones basadas en microservicios con soporte para transporte, middlewares y manejo de errores.
+  - **Micro:** Un ecosistema completo para desarrollar microservicios. Ofrece un conjunto de herramientas como gestión de APIs, registros y balanceo de carga.
+  - **GRPC:** Aunque no es un framework en sí, gRPC es un sistema de RPC (Remote Procedure Call) que permite la comunicación eficiente entre microservicios utilizando Protocol Buffers.
 
-- **Frameworks para CLI (Command Line Interfaces)**
+- ### Frameworks para CLI (Command Line Interfaces)
 
-  - Cobra: Un framework para crear aplicaciones de línea de comandos. Es el que utiliza kubectl, la CLI de Kubernetes.
-  - urfave/cli: Otro framework popular para construir CLI en Go, que ofrece una API sencilla para manejar comandos, flags y argumentos.
+  - **Cobra:** Un framework para crear aplicaciones de línea de comandos. Es el que utiliza kubectl, la CLI de Kubernetes.
+  - **urfave/cli:** Otro framework popular para construir CLI en Go, que ofrece una API sencilla para manejar comandos, flags y argumentos.
 
-- **Frameworks de Tareas Programadas y Concurrentes**
+- ### Frameworks de Tareas Programadas y Concurrentes
 
-  - Cron: Un paquete sencillo que permite programar tareas recurrentes, similar a la herramienta cron de sistemas UNIX.
-  - Go-Worker: Un framework para construir sistemas de procesamiento en segundo plano con workers y colas de trabajo.
+  - **Cron:** Un paquete sencillo que permite programar tareas recurrentes, similar a la herramienta cron de sistemas UNIX.
+  - **Go-Worker:** Un framework para construir sistemas de procesamiento en segundo plano con workers y colas de trabajo.
 
-- **Frameworks de ORMs (Mapeo Objeto-Relacional)**
+- ### Frameworks de ORMs (Mapeo Objeto-Relacional)
 
-  - GORM: Es el ORM más popular para Go, que facilita el manejo de bases de datos relacionales.
-  - SQLBoiler: Genera código a partir de un esquema de base de datos, lo que permite una interacción eficiente con las bases de datos.
-  - XORM: Otro ORM simple para trabajar con bases de datos en Go, con soporte para migraciones y cacheo.
+  - **GORM:** Es el ORM más popular para Go, que facilita el manejo de bases de datos relacionales.
+  - **SQLBoiler:** Genera código a partir de un esquema de base de datos, lo que permite una interacción eficiente con las bases de datos.
+  - **XORM:** Otro ORM simple para trabajar con bases de datos en Go, con soporte para migraciones y cacheo.
 
-- **Frameworks de Seguridad**
+- ### Frameworks de Seguridad
 
-  - Casbin: Un sistema de control de acceso basado en roles (RBAC) y atributos (ABAC), útil para gestionar permisos en aplicaciones.
-  - Authboss: Un framework modular de autenticación que soporta múltiples estrategias como OAuth2 y JWT.
+  - **Casbin:** Un sistema de control de acceso basado en roles (RBAC) y atributos (ABAC), útil para gestionar permisos en aplicaciones.
+  - **Authboss:** Un framework modular de autenticación que soporta múltiples estrategias como OAuth2 y JWT.
 
-- **Frameworks de Redes y Comunicación**
+- ### Frameworks de Redes y Comunicación
 
-  - Go-Socket.IO: Implementación de Socket.IO en Go, que permite la comunicación en tiempo real con WebSockets.
-  - NATS: Un sistema de mensajería distribuida para la creación de aplicaciones en tiempo real.
+  - **Go-Socket.IO:** Implementación de Socket.IO en Go, que permite la comunicación en tiempo real con WebSockets.
+  - **NATS:** Un sistema de mensajería distribuida para la creación de aplicaciones en tiempo real.
