--- a/Go/Documentación/17.Seguridad.md
+++ b/Go/Documentación/17.Seguridad.md
@@ -11,11 +11,11 @@ La seguridad en la programación es un aspecto fundamental que debe ser consider
 
 JWT es una forma común de autenticar usuarios en sistemas distribuidos. Un token JWT contiene una firma que garantiza la integridad de los datos y es utilizado para la autenticación sin estado (stateless) en APIs.
 
-- **Estructura de un JWT:**
+#### Estructura de un JWT
 
-  - Header: Contiene el tipo de token (JWT) y el algoritmo de cifrado (HS256).
-  - Payload: Contiene la información del usuario y cualquier otro dato relevante.
-  - Signature: Firma generada usando el header, el payload y una clave secreta.
+- **Header:** Contiene el tipo de token (JWT) y el algoritmo de cifrado (HS256).
+- **Payload:** Contiene la información del usuario y cualquier otro dato relevante.
+- **Signature:** Firma generada usando el header, el payload y una clave secreta.
 
 ```json
 {
@@ -57,11 +57,12 @@ func generarJWT() (string, error) {
 
 OAuth 2.0 es un protocolo de autorización utilizado para permitir que aplicaciones de terceros accedan a los recursos de un usuario en otro sistema sin compartir las credenciales del usuario. Se utiliza ampliamente para integraciones con servicios como Google, Facebook y GitHub.
 
-- **Flujos principales:**
-  - Authorization Code Grant: Utilizado por aplicaciones web.
-  - Implicit Grant: Para aplicaciones móviles o basadas en JavaScript.
-  - Client Credentials Grant: Para autenticación entre servidores.
-  - Resource Owner Password Credentials: Utilizado cuando el usuario confía completamente en la aplicación.
+#### Flujos principales
+
+- **Authorization Code Grant:** Utilizado por aplicaciones web.
+- **Implicit Grant:** Para aplicaciones móviles o basadas en JavaScript.
+- **Client Credentials Grant:** Para autenticación entre servidores.
+- **Resource Owner Password Credentials:** Utilizado cuando el usuario confía completamente en la aplicación.
 
 ---
 
@@ -73,50 +74,50 @@ El cifrado es una técnica clave para proteger la información sensible, tanto e
 
 En el cifrado simétrico, la misma clave se utiliza tanto para cifrar como para descifrar los datos. Un ejemplo común es el uso del algoritmo AES (Advanced Encryption Standard).
 
-- **Cifrado simétrico en Go usando AES:**
+#### Cifrado simétrico en Go usando AES
 
-  ```go
-  import (
-      "crypto/aes"
-      "crypto/cipher"
-  )
+```go
+import (
+    "crypto/aes"
+    "crypto/cipher"
+)
 
-  func cifrarAES(key, text []byte) ([]byte, error) {
-      block, err := aes.NewCipher(key)
-      if err != nil {
-          return nil, err
-      }
-      ciphertext := make([]byte, aes.BlockSize+len(text))
-      iv := ciphertext[:aes.BlockSize]
-      stream := cipher.NewCFBEncrypter(block, iv)
-      stream.XORKeyStream(ciphertext[aes.BlockSize:], text)
-      return ciphertext, nil
-  }
+func cifrarAES(key, text []byte) ([]byte, error) {
+    block, err := aes.NewCipher(key)
+    if err != nil {
+        return nil, err
+    }
+    ciphertext := make([]byte, aes.BlockSize+len(text))
+    iv := ciphertext[:aes.BlockSize]
+    stream := cipher.NewCFBEncrypter(block, iv)
+    stream.XORKeyStream(ciphertext[aes.BlockSize:], text)
+    return ciphertext, nil
+}
 
-  ```
+```
 
 ### Cifrado Asimétrico
 
 El cifrado asimétrico utiliza un par de claves: una pública y una privada. La clave pública cifra los datos y la clave privada los descifra. Un ejemplo común es el algoritmo RSA.
 
-- **Generación de claves RSA en Go:**
+#### Generación de claves RSA en Go
 
-  ```go
-  import (
-      "crypto/rsa"
-      "crypto/rand"
-  )
+```go
+import (
+    "crypto/rsa"
+    "crypto/rand"
+)
 
-  func generarClavesRSA() (*rsa.PrivateKey, *rsa.PublicKey, error) {
-      privateKey, err := rsa.GenerateKey(rand.Reader, 2048)
-      if err != nil {
-          return nil, nil, err
-      }
-      publicKey := &privateKey.PublicKey
-      return privateKey, publicKey, nil
-  }
+func generarClavesRSA() (*rsa.PrivateKey, *rsa.PublicKey, error) {
+    privateKey, err := rsa.GenerateKey(rand.Reader, 2048)
+    if err != nil {
+        return nil, nil, err
+    }
+    publicKey := &privateKey.PublicKey
+    return privateKey, publicKey, nil
+}
 
-  ```
+```
 
 ---
 
