--- a/Go/Documentación/18.PatronesDiseñoGo.md
+++ b/Go/Documentación/18.PatronesDiseñoGo.md
@@ -4,7 +4,9 @@ En Golang, los patrones de diseño no se implementan exactamente de la misma man
 
 ## 18.1. Patrones Creacionales en Go
 
-- **Singleton en Go:** En Go, no existen las clases como en otros lenguajes, por lo que los singletons suelen implementarse utilizando variables globales y asegurando la creación única mediante un sync.Once, que garantiza que un bloque de código solo se ejecute una vez.
+### Singleton en Go
+
+En Go, no existen las clases como en otros lenguajes, por lo que los singletons suelen implementarse utilizando variables globales y asegurando la creación única mediante un sync.Once, que garantiza que un bloque de código solo se ejecute una vez.
 
 ```go
 package main
@@ -35,7 +37,9 @@ func main() {
 
 ```
 
-- **Factory en Go:** En Go, las fábricas no se implementan como en lenguajes OO tradicionales. Sin embargo, las funciones pueden servir como fábricas que retornan diferentes tipos dependiendo de la entrada.
+### Factory en Go
+
+En Go, las fábricas no se implementan como en lenguajes OO tradicionales. Sin embargo, las funciones pueden servir como fábricas que retornan diferentes tipos dependiendo de la entrada.
 
 ```go
 type Animal interface {
@@ -71,7 +75,9 @@ func main() {
 
 ## 18.2. Patrones Estructurales en Go
 
-- **Adapter en Go:** Go usa interfaces para implementar el patrón de Adaptador. La idea es crear una nueva estructura que envuelva la funcionalidad existente para que se ajuste a una nueva interfaz.
+### Adapter en Go
+
+Go usa interfaces para implementar el patrón de Adaptador. La idea es crear una nueva estructura que envuelva la funcionalidad existente para que se ajuste a una nueva interfaz.
 
 ```go
 type MediaPlayer interface {
@@ -101,7 +107,9 @@ func main() {
 
 ```
 
-- **Decorator en Go:** Los decoradores se implementan envolviendo funciones u objetos para agregar comportamiento adicional.
+### Decorator en Go
+
+Los decoradores se implementan envolviendo funciones u objetos para agregar comportamiento adicional.
 
 ```go
 type Notifier interface {
@@ -133,7 +141,9 @@ func main() {
 
 ## 18.3. Patrones Comportamentales en Go
 
-- **Strategy en Go:** El patrón Strategy se implementa usando interfaces. Go permite que las funciones sean intercambiables como estrategias.
+### Strategy en Go
+
+El patrón Strategy se implementa usando interfaces. Go permite que las funciones sean intercambiables como estrategias.
 
 ```go
 type PaymentStrategy interface {
@@ -162,7 +172,9 @@ func main() {
 
 ```
 
-- **Observer en Go:** El patrón Observer puede implementarse utilizando canales (channels) o funciones callback en Go, lo que permite una forma natural de enviar notificaciones.
+### Observer en Go
+
+El patrón Observer puede implementarse utilizando canales (channels) o funciones callback en Go, lo que permite una forma natural de enviar notificaciones.
 
 ```go
 type Observer interface {
@@ -206,7 +218,9 @@ func main() {
 
 ## 18.4. Arquitectura en Go
 
-**Microservicios:** Go es ampliamente utilizado para construir microservicios debido a su rendimiento y eficiencia. Go permite crear APIs y servicios rápidos y eficientes usando paquetes como net/http y frameworks como Gin o Echo.
+### Microservicios
+
+Go es ampliamente utilizado para construir microservicios debido a su rendimiento y eficiencia. Go permite crear APIs y servicios rápidos y eficientes usando paquetes como net/http y frameworks como Gin o Echo.
 
 ```go
 package main
@@ -227,7 +241,9 @@ func main() {
 
 ```
 
-**Arquitectura Hexagonal:** En Go, se puede implementar la arquitectura hexagonal dividiendo el código en capas y adaptadores, asegurando que la lógica de negocio sea independiente de la entrada y salida. Los adaptadores pueden manejar las interfaces externas (HTTP, bases de datos, etc.) mientras la lógica central permanece limpia y modular.
+### Arquitectura Hexagonal
+
+En Go, se puede implementar la arquitectura hexagonal dividiendo el código en capas y adaptadores, asegurando que la lógica de negocio sea independiente de la entrada y salida. Los adaptadores pueden manejar las interfaces externas (HTTP, bases de datos, etc.) mientras la lógica central permanece limpia y modular.
 
 ## 18.5. Estructura de carpetas en Go
 
