--- a/Go/Documentación/2.Operadores.md
+++ b/Go/Documentación/2.Operadores.md
@@ -2,37 +2,68 @@
 
 ## 2.1. Operadores Aritméticos
 
-- Suma: + (Ejemplo: a + b)
-- Resta: - (Ejemplo: a - b)
-- Multiplicación: \* (Ejemplo: a \* b)
-- División: / (Ejemplo: a / b)
-- Módulo: % (Ejemplo: a % b)
+- **Suma:** `+`  
+  Ejemplo: `a + b`
+- **Resta:** `-`  
+  Ejemplo: `a - b`
+- **Multiplicación:** `*`  
+  Ejemplo: `a * b`
+- **División:** `/`  
+  Ejemplo: `a / b`
+- **Módulo:** `%`  
+  Ejemplo: `a % b`
 
 ## 2.2. Operadores de Comparación
 
-- Igual a: == (Ejemplo: a == b)
-- Diferente a: != (Ejemplo: a != b)
-- Mayor que: > (Ejemplo: a > b)
-- Menor que: < (Ejemplo: a < b)
-- Mayor o igual que: >= (Ejemplo: a >= b)
-- Menor o igual que: <= (Ejemplo: a <= b)
+- **Igual a:** `==`  
+  Ejemplo: `a == b`
+- **Diferente a:** `!=`  
+  Ejemplo: `a != b`
+- **Mayor que:** `>`  
+  Ejemplo: `a > b`
+- **Menor que:** `<`  
+  Ejemplo: `a < b`
+- **Mayor o igual que:** `>=`  
+  Ejemplo: `a >= b`
+- **Menor o igual que:** `<=`  
+  Ejemplo: `a <= b`
 
 ## 2.3. Operadores Lógicos
 
-- AND lógico: && (Ejemplo: c && d)
-- OR lógico: || (Ejemplo: c || d)
-- NOT lógico: ! (Ejemplo: !c)
+- **AND lógico:** `&&`  
+  Ejemplo: `c && d`
+- **OR lógico:** `||`  
+  Ejemplo: `c || d`
+- **NOT lógico:** `!`  
+  Ejemplo: `!c`
 
 ## 2.4. Operadores Bit a Bit
 
-- AND bit a bit: & (Ejemplo: a & b)
-- OR bit a bit: | (Ejemplo: a | b)
-- XOR bit a bit: ^ (Ejemplo: a ^ b)
-- AND NOT bit a bit: &^ (Ejemplo: a &^ b)
-- Desplazamiento a la izquierda: << (Ejemplo: a << 1)
-- Desplazamiento a la derecha: >> (Ejemplo: a >> 1)
+- **AND bit a bit:** `&`  
+  Ejemplo: `a & b`
+- **OR bit a bit:** `|`  
+  Ejemplo: `a | b`
+- **XOR bit a bit:** `^`  
+  Ejemplo: `a ^ b`
+- **AND NOT bit a bit:** `&^`  
+  Ejemplo: `a &^ b`
+- **Desplazamiento a la izquierda:** `<<`  
+  Ejemplo: `a << 1`
+- **Desplazamiento a la derecha:** `>>`  
+  Ejemplo: `a >> 1`
 
 ## 2.5. Operadores de Asignación
 
-- Asignación simple: = (Ejemplo: a = 5)
-- Asignación compuesta: +=, -=, \*=, /=, %= (Ejemplo: a += 5)
+- **Asignación simple:** `=`  
+  Ejemplo: `a = 5`
+- **Asignación compuesta:**
+  - **Suma:** `+=`  
+    Ejemplo: `a += 5`
+  - **Resta:** `-=`  
+    Ejemplo: `a -= 5`
+  - **Multiplicación:** `*=`  
+    Ejemplo: `a *= 5`
+  - **División:** `/=`  
+    Ejemplo: `a /= 5`
+  - **Módulo:** `%=`  
+    Ejemplo: `a %= 5`
