--- a/Go/Documentación/23. FuncionesBuild-in.md
+++ b/Go/Documentación/23. FuncionesBuild-in.md
@@ -2,341 +2,339 @@
 
 Go, ofrece un conjunto robusto de funciones integradas que simplifican significativamente la programación. Estas funciones son parte del lenguaje y están siempre disponibles para su uso directo.
 
-## 23.1. Funciones nativas sin librerías
+## 23.1. Funciones Nativas Sin Librerías
 
-- append: Agrega elementos a un slice y devuelve el slice modificado.
-- cap: Devuelve la capacidad de un slice, array o channel.
-- close: Cierra un channel para que no se puedan enviar más valores.
-- complex: Crea un número complejo a partir de dos números flotantes.
-- copy: Copia elementos de un slice a otro y devuelve el número de elementos copiados.
-- delete: Elimina una clave específica de un map.
-- imag: Devuelve la parte imaginaria de un número complejo.
-- len: Devuelve la longitud de un array, slice, map, string o channel.
-- make: Crea y devuelve un slice, map o channel con un tamaño o capacidad inicial.
-- new: Asigna y devuelve un puntero a una nueva variable del tipo dado.
-- panic: Lanza un pánico, que es una interrupción del flujo normal del programa.
-- print: Imprime valores (no recomendado para producción, solo para debugging).
-- println: Imprime valores con una nueva línea (también para debugging).
-- real: Devuelve la parte real de un número complejo.
-- recover: Recupera la ejecución de una función tras un panic, evitando que el programa termine.
-- error: Devuelve un valor de tipo error, que es una interfaz estándar para errores.
-- bool: Convierte un valor a tipo booleano (true o false).
-- byte: Tipo alias para uint8, se usa comúnmente para representar bytes.
-- rune: Tipo alias para int32, usado para representar un código de punto Unicode.
-- int: Convierte un valor a tipo entero.
-- uint: Convierte un valor a tipo entero sin signo.
-- uintptr: Convierte un valor a un tipo uintptr, utilizado para punteros.
-- float32: Convierte un valor a tipo flotante de 32 bits.
-- float64: Convierte un valor a tipo flotante de 64 bits.
-- complex64: Convierte dos números a un número complejo de 64 bits.
-- complex128: Convierte dos números a un número complejo de 128 bits.
-- string: Convierte un valor a tipo cadena de texto.
-- int8: Convierte un valor a un entero de 8 bits con signo.
-- int16: Convierte un valor a un entero de 16 bits con signo.
-- int32: Convierte un valor a un entero de 32 bits con signo.
-- int64: Convierte un valor a un entero de 64 bits con signo.
-- uint8: Convierte un valor a un entero de 8 bits sin signo.
-- uint16: Convierte un valor a un entero de 16 bits sin signo.
-- uint32: Convierte un valor a un entero de 32 bits sin signo.
-- uint64: Convierte un valor a un entero de 64 bits sin signo.
-- any: Alias para interface{}, que permite representar cualquier tipo de valor.
-- iota: Utilizado principalmente en bloques de constantes, comienza en 0 y se incrementa en cada uso dentro del bloque.
-- nil: Valor cero para punteros, interfaces, mapas, slices, canales y funciones.
-- defer: Pospone la ejecución de una función hasta que la función que la contiene retorne.
-- go: Inicia una goroutine para ejecutar funciones concurrentemente.
-- select: Espera múltiples operaciones de canal.
-- uintptr: Similar a int, pero específico para almacenar punteros que pueden ser manipulados de forma numérica.
+- **append:** Agrega elementos a un slice y devuelve el slice modificado.
+- **cap:** Devuelve la capacidad de un slice, array o channel.
+- **close:** Cierra un channel para que no se puedan enviar más valores.
+- **complex:** Crea un número complejo a partir de dos números flotantes.
+- **copy:** Copia elementos de un slice a otro y devuelve el número de elementos copiados.
+- **delete:** Elimina una clave específica de un map.
+- **imag:** Devuelve la parte imaginaria de un número complejo.
+- **len:** Devuelve la longitud de un array, slice, map, string o channel.
+- **make:** Crea y devuelve un slice, map o channel con un tamaño o capacidad inicial.
+- **new:** Asigna y devuelve un puntero a una nueva variable del tipo dado.
+- **panic:** Lanza un pánico, que es una interrupción del flujo normal del programa.
+- **print:** Imprime valores (no recomendado para producción, solo para debugging).
+- **println:** Imprime valores con una nueva línea (también para debugging).
+- **real:** Devuelve la parte real de un número complejo.
+- **recover:** Recupera la ejecución de una función tras un panic, evitando que el programa termine.
+
+### Tipos de Datos
+
+- **error:** Devuelve un valor de tipo error, que es una interfaz estándar para errores.
+- **bool:** Convierte un valor a tipo booleano (true o false).
+- **byte:** Tipo alias para uint8, se usa comúnmente para representar bytes.
+- **rune:** Tipo alias para int32, usado para representar un código de punto Unicode.
+- **int:** Convierte un valor a tipo entero.
+- **uint:** Convierte un valor a tipo entero sin signo.
+- **uintptr:** Convierte un valor a un tipo uintptr, utilizado para punteros.
+- **float32:** Convierte un valor a tipo flotante de 32 bits.
+- **float64:** Convierte un valor a tipo flotante de 64 bits.
+- **complex64:** Convierte dos números a un número complejo de 64 bits.
+- **complex128:** Convierte dos números a un número complejo de 128 bits.
+- **string:** Convierte un valor a tipo cadena de texto.
+- **int8:** Convierte un valor a un entero de 8 bits con signo.
+- **int16:** Convierte un valor a un entero de 16 bits con signo.
+- **int32:** Convierte un valor a un entero de 32 bits con signo.
+- **int64:** Convierte un valor a un entero de 64 bits con signo.
+- **uint8:** Convierte un valor a un entero de 8 bits sin signo.
+- **uint16:** Convierte un valor a un entero de 16 bits sin signo.
+- **uint32:** Convierte un valor a un entero de 32 bits sin signo.
+- **uint64:** Convierte un valor a un entero de 64 bits sin signo.
+- **any:** Alias para `interface{}`, que permite representar cualquier tipo de valor.
+- **iota:** Utilizado principalmente en bloques de constantes, comienza en 0 y se incrementa en cada uso dentro del bloque.
+- **nil:** Valor cero para punteros, interfaces, mapas, slices, canales y funciones.
+
+### Control de Concurrencia
+
+- **defer:** Pospone la ejecución de una función hasta que la función que la contiene retorne.
+- **go:** Inicia una goroutine para ejecutar funciones concurrentemente.
+- **select:** Espera múltiples operaciones de canal.
+- **uintptr:** Similar a `int`, pero específico para almacenar punteros que pueden ser manipulados de forma numérica.
 
 ---
 
 ## 23.2. Funciones de librerías nativas
 
-- **fmt (formateo de entrada y salida)**
-
-  - fmt.Print: Imprime en la salida estándar.
-  - fmt.Println: Imprime en la salida estándar con una nueva línea.
-  - fmt.Printf: Imprime con formato según un string de formato.
-  - fmt.Sprintf: Devuelve un string con formato en lugar de imprimirlo.
-  - fmt.Scan: Escanea la entrada estándar para leer valores.
-  - fmt.Scanf: Escanea la entrada estándar con formato específico.
-  - fmt.Error: Crea un error con formato.
-
-- **strings (manipulación de cadenas)**
-
-  - strings.Contains: Verifica si una subcadena está presente en una cadena.
-  - strings.HasPrefix: Verifica si una cadena comienza con un prefijo específico.
-  - strings.HasSuffix: Verifica si una cadena termina con un sufijo específico.
-  - strings.Split: Divide una cadena en un slice de subcadenas.
-  - strings.Join: Combina un slice de cadenas en una sola cadena.
-  - strings.Replace: Reemplaza subcadenas dentro de una cadena.
-  - strings.Trim: Elimina los caracteres especificados desde el inicio y el final de una cadena.
-  - strings.ToUpper / strings.ToLower: Convierte una cadena a mayúsculas/minúsculas.
-
-- **math (funciones matemáticas)**
-
-  - math.Abs: Devuelve el valor absoluto de un número.
-  - math.Pow: Calcula la potencia de un número.
-  - math.Sqrt: Devuelve la raíz cuadrada de un número.
-  - math.Sin, math.Cos, math.Tan: Funciones trigonométricas.
-  - math.Log, math.Log10: Logaritmos naturales y base 10.
-  - math.Max / math.Min: Devuelve el máximo o mínimo de dos números.
-  - math.Round: Redondea un número al entero más cercano.
-
-- **time (trabajo con fechas y tiempos)**
+## sort (Ordenación)
 
-  - time.Now: Devuelve el momento actual.
-  - time.Sleep: Pausa la ejecución durante una cantidad de tiempo especificada.
-  - time.Parse: Convierte una cadena de texto a un valor de tiempo.
-  - time.Format: Formatea un tiempo según un layout específico.
-  - time.After: Crea un canal que recibe un valor después de un periodo de tiempo.
-  - time.Since: Devuelve el tiempo transcurrido desde un momento dado.
+- `sort.Ints`: Ordena un slice de enteros.
+- `sort.Strings`: Ordena un slice de cadenas.
+- `sort.Float64s`: Ordena un slice de flotantes.
+- `sort.Sort`: Ordena cualquier tipo implementando la interfaz sort.Interface.
+- `sort.Reverse`: Invierte el orden de los elementos.
 
-- **sort (ordenación)**
-
-  - sort.Ints: Ordena un slice de enteros.
-  - sort.Strings: Ordena un slice de cadenas.
-  - sort.Float64s: Ordena un slice de flotantes.
-  - sort.Sort: Ordena cualquier tipo implementando la interfaz sort.Interface.
-  - sort.Reverse: Invierte el orden de los elementos.
+## strconv (Conversión de Tipos)
 
-- **strconv (conversión de tipos)**
-
-  - strconv.Atoi: Convierte una cadena a entero.
-  - strconv.Itoa: Convierte un entero a cadena.
-  - strconv.ParseBool: Convierte una cadena a booleano.
-  - strconv.ParseFloat: Convierte una cadena a flotante.
-  - strconv.ParseInt: Convierte una cadena a entero con base especificada.
-  - strconv.FormatFloat: Convierte un flotante a cadena con formato específico.
+- `strconv.Atoi`: Convierte una cadena a entero.
+- `strconv.Itoa`: Convierte un entero a cadena.
+- `strconv.ParseBool`: Convierte una cadena a booleano.
+- `strconv.ParseFloat`: Convierte una cadena a flotante.
+- `strconv.ParseInt`: Convierte una cadena a entero con base especificada.
+- `strconv.FormatFloat`: Convierte un flotante a cadena con formato específico.
 
-- **os (interacción con el sistema operativo)**
-
-  - os.Open: Abre un archivo.
-  - os.Create: Crea un archivo.
-  - os.Remove: Elimina un archivo.
-  - os.Rename: Cambia el nombre de un archivo.
-  - os.Mkdir: Crea un directorio.
-  - os.Exit: Finaliza el programa con un código de estado.
-  - os.Getenv: Obtiene el valor de una variable de entorno.
-
-- **io (entrada y salida)**
+## os (Interacción con el Sistema Operativo)
 
-  - io.Copy: Copia datos de un Reader a un Writer.
-  - io.ReadAll: Lee todos los datos de un Reader.
-  - io.WriteString: Escribe una cadena a un Writer.
-  - io.TeeReader: Lee de un Reader y copia los datos en un Writer.
-
-- **bufio (buffered I/O)**
+- `os.Open`: Abre un archivo.
+- `os.Create`: Crea un archivo.
+- `os.Remove`: Elimina un archivo.
+- `os.Rename`: Cambia el nombre de un archivo.
+- `os.Mkdir`: Crea un directorio.
+- `os.Exit`: Finaliza el programa con un código de estado.
+- `os.Getenv`: Obtiene el valor de una variable de entorno.
 
-  - bufio.NewReader: Crea un lector con búfer.
-  - bufio.NewWriter: Crea un escritor con búfer.
-  - bufio.ReadLine: Lee una línea del lector.
-  - bufio.ReadBytes: Lee hasta un delimitador y devuelve los bytes leídos.
+## io (Entrada y Salida)
 
-- **encoding/json (manipulación de JSON)**
+- `io.Copy`: Copia datos de un Reader a un Writer.
+- `io.ReadAll`: Lee todos los datos de un Reader.
+- `io.WriteString`: Escribe una cadena a un Writer.
+- `io.TeeReader`: Lee de un Reader y copia los datos en un Writer.
 
-  - json.Marshal: Convierte una estructura en un JSON.
-  - json.Unmarshal: Convierte un JSON en una estructura.
-  - json.NewDecoder: Crea un decodificador de JSON a partir de un Reader.
-  - json.NewEncoder: Crea un codificador de JSON a partir de un Writer.
+## bufio (Buffered I/O)
 
-- **regexp (expresiones regulares)**
+- `bufio.NewReader`: Crea un lector con búfer.
+- `bufio.NewWriter`: Crea un escritor con búfer.
+- `bufio.ReadLine`: Lee una línea del lector.
+- `bufio.ReadBytes`: Lee hasta un delimitador y devuelve los bytes leídos.
+- `bufio.Scanner`: Escanea texto línea por línea.
+- `bufio.Writer.Flush`: Escribe cualquier dato almacenado en el buffer a la salida.
 
-  - regexp.Compile: Compila una expresión regular.
-  - regexp.MatchString: Verifica si una cadena coincide con una expresión regular.
-  - regexp.ReplaceAllString: Reemplaza todas las coincidencias en una cadena.
-  - regexp.FindAllString: Encuentra todas las coincidencias de una expresión regular.
+## encoding/json (Manipulación de JSON)
 
-- **net/http (manejo de solicitudes HTTP)**
+- `json.Marshal`: Convierte una estructura en un JSON.
+- `json.Unmarshal`: Convierte un JSON en una estructura.
+- `json.NewDecoder`: Crea un decodificador de JSON a partir de un Reader.
+- `json.NewEncoder`: Crea un codificador de JSON a partir de un Writer.
 
-  - http.Get: Realiza una solicitud GET.
-  - http.Post: Realiza una solicitud POST.
-  - http.ListenAndServe: Inicia un servidor HTTP.
-  - http.HandleFunc: Maneja rutas HTTP con una función específica.
-  - http.NewRequest: Crea una nueva solicitud HTTP.
+## regexp (Expresiones Regulares)
 
-- **crypto (funciones criptográficas)**
+- `regexp.Compile`: Compila una expresión regular.
+- `regexp.MatchString`: Verifica si una cadena coincide con una expresión regular.
+- `regexp.ReplaceAllString`: Reemplaza todas las coincidencias en una cadena.
+- `regexp.FindAllString`: Encuentra todas las coincidencias de una expresión regular.
 
-  - crypto/rand.Read: Genera números aleatorios criptográficamente seguros
-  - crypto/sha256.Sum256: Calcula el hash SHA-256 de los datos.
-  - crypto/md5.New: Crea una nueva instancia de hash MD5.
-  - crypto/aes.NewCipher: Crea un nuevo cifrador AES.
+## net/http (Manejo de Solicitudes HTTP)
 
-- **math/rand (generación de números aleatorios)**
+- `http.Get`: Realiza una solicitud GET.
+- `http.Post`: Realiza una solicitud POST.
+- `http.ListenAndServe`: Inicia un servidor HTTP.
+- `http.HandleFunc`: Maneja rutas HTTP con una función específica.
+- `http.NewRequest`: Crea una nueva solicitud HTTP.
 
-  - rand.Intn: Devuelve un número aleatorio no negativo menor que un valor dado.
-  - rand.Float64: Devuelve un número aleatorio flotante entre 0.0 y 1.0.
-  - rand.Seed: Inicializa el generador de números aleatorios con una semilla.
+## crypto (Funciones Criptográficas)
 
-- **sync (sincronización de concurrencia)**
+- `crypto/rand.Read`: Genera números aleatorios criptográficamente seguros.
+- `crypto/sha256.Sum256`: Calcula el hash SHA-256 de los datos.
+- `crypto/md5.New`: Crea una nueva instancia de hash MD5.
+- `crypto/aes.NewCipher`: Crea un nuevo cifrador AES.
 
-  - sync.Mutex: Crea un mutex para bloquear y desbloquear secciones críticas.
-  - sync.WaitGroup: Espera a que un conjunto de goroutines finalice.
-  - sync.Once: Ejecuta una función una única vez.
+## math/rand (Generación de Números Aleatorios)
 
-- **log (manejo de registros)**
+- `rand.Intn`: Devuelve un número aleatorio no negativo menor que un valor dado.
+- `rand.Float64`: Devuelve un número aleatorio flotante entre 0.0 y 1.0.
+- `rand.Seed`: Inicializa el generador de números aleatorios con una semilla.
 
-  - log.Print: Imprime un mensaje en el registro.
-  - log.Println: Imprime un mensaje en el registro con una nueva línea.
-  - log.Fatal: Imprime un mensaje y termina el programa.
-  - log.Panic: Imprime un mensaje y genera un pánico.
+## sync (Sincronización de Concurrencia)
 
-- **flag (manejo de parámetros de línea de comandos)**
+- `sync.Mutex`: Crea un mutex para bloquear y desbloquear secciones críticas.
+- `sync.WaitGroup`: Espera a que un conjunto de goroutines finalice.
+- `sync.Once`: Ejecuta una función una única vez.
 
-  - flag.String: Define una bandera de cadena de texto.
-  - flag.Int: Define una bandera de entero.
-  - flag.Parse: Analiza los argumentos de la línea de comandos.
+## log (Manejo de Registros)
 
-- **reflect (manipulación de tipos en tiempo de ejecución)**
+- `log.Print`: Imprime un mensaje en el registro.
+- `log.Println`: Imprime un mensaje en el registro con una nueva línea.
+- `log.Fatal`: Imprime un mensaje y termina el programa.
+- `log.Panic`: Imprime un mensaje y genera un pánico.
 
-  - reflect.TypeOf: Devuelve el tipo de un valor.
-  - reflect.ValueOf: Devuelve el valor de un objeto en tiempo de ejecución.
-  - reflect.DeepEqual: Compara si dos valores son iguales.
-  - reflect.Value.IsValid: Verifica si un valor es válido o no.
-  - reflect.Value.Kind: Devuelve el tipo de un valor en tiempo de ejecución (struct, int, slice, etc.).
+## flag (Manejo de Parámetros de Línea de Comandos)
 
-- **bytes (manipulación de slices de bytes)**
+- `flag.String`: Define una bandera de cadena de texto.
+- `flag.Int`: Define una bandera de entero.
+- `flag.Parse`: Analiza los argumentos de la línea de comandos.
 
-  - bytes.Contains: Verifica si un slice de bytes contiene otro.
-  - bytes.Compare: Compara dos slices de bytes.
-  - bytes.Equal: Compara si dos slices de bytes son iguales.
-  - bytes.Split: Divide un slice de bytes en sub-slices.
-  - bytes.Join: Combina varios slices de bytes en uno.
-  - bytes.Buffer: Estructura para construir y manipular bytes de manera eficiente.
+## reflect (Manipulación de Tipos en Tiempo de Ejecución)
 
-- **context (manejo de contexto y cancelación)**
+- `reflect.TypeOf`: Devuelve el tipo de un valor.
+- `reflect.ValueOf`: Devuelve el valor de un objeto en tiempo de ejecución.
+- `reflect.DeepEqual`: Compara si dos valores son iguales.
+- `reflect.Value.IsValid`: Verifica si un valor es válido o no.
+- `reflect.Value.Kind`: Devuelve el tipo de un valor en tiempo de ejecución (struct, int, slice, etc.).
 
-  - context.Background: Devuelve un contexto vacío que se puede usar como base.
-  - context.WithCancel: Crea un contexto que se puede cancelar.
-  - context.WithTimeout: Crea un contexto con un tiempo de espera.
-  - context.WithValue: Asocia valores con un contexto.
+## bytes (Manipulación de Slices de Bytes)
 
-- **filepath (manipulación de rutas de archivos)**
+- `bytes.Contains`: Verifica si un slice de bytes contiene otro.
+- `bytes.Compare`: Compara dos slices de bytes.
+- `bytes.Equal`: Compara si dos slices de bytes son iguales.
+- `bytes.Split`: Divide un slice de bytes en sub-slices.
+- `bytes.Join`: Combina varios slices de bytes en uno.
+- `bytes.Buffer`: Estructura para construir y manipular bytes de manera eficiente.
 
-  - filepath.Join: Combina varios fragmentos de rutas de archivo.
-  - filepath.Dir: Devuelve el directorio de una ruta de archivo.
-  - filepath.Base: Devuelve el último elemento de una ruta.
-  - filepath.Ext: Devuelve la extensión de un archivo.
-  - filepath.Walk: Recorre un directorio y sus subdirectorios.
-  - filepath.Abs: Devuelve la ruta absoluta.
+## context (Manejo de Contexto y Cancelación)
 
-- **sync/atomic (operaciones atómicas)**
+- `context.Background`: Devuelve un contexto vacío que se puede usar como base.
+- `context.WithCancel`: Crea un contexto que se puede cancelar.
+- `context.WithTimeout`: Crea un contexto con un tiempo de espera.
+- `context.WithValue`: Asocia valores con un contexto.
 
-  - atomic.AddInt32 / AddInt64: Operaciones de suma atómica en enteros.
-  - atomic.LoadInt32 / LoadInt64: Lee un valor de entero atómicamente.
-  - atomic.StoreInt32 / StoreInt64: Escribe un valor de entero atómicamente.
-  - atomic.CompareAndSwapInt32 / CompareAndSwapInt64: Compara y cambia un valor atómicamente.
+## filepath (Manipulación de Rutas de Archivos)
 
-- **errors (manejo de errores)**
+- `filepath.Join`: Combina varios fragmentos de rutas de archivo.
+- `filepath.Dir`: Devuelve el directorio de una ruta de archivo.
+- `filepath.Base`: Devuelve el último elemento de una ruta.
+- `filepath.Ext`: Devuelve la extensión de un archivo.
+- `filepath.Walk`: Recorre un directorio y sus subdirectorios.
+- `filepath.Abs`: Devuelve la ruta absoluta.
 
-  - errors.New: Crea un nuevo error simple.
-  - errors.Is: Verifica si un error es igual a otro.
-  - errors.As: Convierte un error a un tipo específico.
-  - errors.Unwrap: Desenvuelve un error encapsulado.
+## sync/atomic (Operaciones Atómicas)
 
-- **testing (pruebas y benchmarks)**
+- `atomic.AddInt32` / `AddInt64`: Operaciones de suma atómica en enteros.
+- `atomic.LoadInt32` / `LoadInt64`: Lee un valor de entero atómicamente.
+- `atomic.StoreInt32` / `StoreInt64`: Escribe un valor de entero atómicamente.
+- `atomic.CompareAndSwapInt32` / `CompareAndSwapInt64`: Compara y cambia un valor atómicamente.
 
-  - testing.T: Proporciona métodos para pruebas unitarias.
-  - testing.B: Proporciona métodos para benchmarks.
-  - testing.RunParallel: Ejecuta pruebas en paralelo.
-  - testing.Fail: Marca una prueba como fallida.
+## errors (Manejo de Errores)
 
-- **unsafe (manipulación de punteros y memoria)**
+- `errors.New`: Crea un nuevo error simple.
+- `errors.Is`: Verifica si un error es igual a otro.
+- `errors.As`: Convierte un error a un tipo específico.
+- `errors.Unwrap`: Desenvuelve un error encapsulado.
 
-  - unsafe.Pointer: Convierte entre punteros de tipos diferentes.
-  - unsafe.Sizeof: Devuelve el tamaño en bytes de un valor.
-  - unsafe.Offsetof: Devuelve el desplazamiento de un campo dentro de una estructura.
+## testing (Pruebas y Benchmarks)
 
-- **syscall (interacción con el sistema operativo a bajo nivel)**
+- `testing.T`: Tipo que se usa para escribir pruebas.
+- `testing.B`: Tipo que se usa para escribir benchmarks.
+- `testing.Run`: Ejecuta pruebas.
+- `testing.Fail`: Marca una prueba como fallida.
+- `testing.Log`: Imprime un mensaje en la salida de prueba.
 
-  - syscall.Open: Abre un archivo o dispositivo en el nivel de sistema operativo.
-  - syscall.Close: Cierra un archivo o dispositivo abierto.
-  - syscall.Write: Escribe datos en un archivo o dispositivo abierto.
+## unsafe (Manipulación de Punteros y Memoria)
 
-- **runtime (información y control del entorno de ejecución)**
+- `unsafe.Pointer`: Convierte entre punteros de tipos diferentes.
+- `unsafe.Sizeof`: Devuelve el tamaño en bytes de un valor.
+- `unsafe.Offsetof`: Devuelve el desplazamiento de un campo dentro de una estructura.
 
-  - runtime.GOMAXPROCS: Establece el número máximo de CPUs que puede usar Go.
-  - runtime.GC: Ejecuta el recolector de basura.
-  - runtime.NumGoroutine: Devuelve el número de goroutines actuales.
-  - runtime.Goexit: Termina la goroutine actual sin afectar a otras.
+## syscall (Interacción con el Sistema Operativo a Bajo Nivel)
 
-- **bufio (operaciones de lectura y escritura con buffer)**
+- `syscall.Open`: Abre un archivo o dispositivo en el nivel de sistema operativo.
+- `syscall.Close`: Cierra un archivo o dispositivo abierto.
+- `syscall.Write`: Escribe datos en un archivo o dispositivo abierto.
 
-  - bufio.Scanner: Escanea texto línea por línea.
-  - bufio.Writer.Flush: Escribe cualquier dato almacenado en el buffer a la salida.
+## runtime (Información y Control del Entorno de Ejecución)
 
-- **ioutil (utilidades de entrada/salida)**
+- `runtime.GOMAXPROCS`: Establece el número máximo de CPUs que puede usar Go.
+- `runtime.GC`: Ejecuta el recolector de basura.
+- `runtime.NumGoroutine`: Devuelve el número de goroutines actuales.
+- `runtime.Goexit`: Termina la goroutine actual sin afectar a otras.
 
-  - ioutil.ReadFile: Lee el contenido de un archivo y lo devuelve como un slice de bytes.
-  - ioutil.WriteFile: Escribe datos en un archivo.
-  - ioutil.TempFile: Crea un archivo temporal.
-  - ioutil.TempDir: Crea un directorio temporal.
+## ioutil (Utilidades de Entrada/Salida)
 
-- **os/signal (manejo de señales del sistema)**
+- `ioutil.ReadFile`: Lee el contenido de un archivo y lo devuelve como un slice de bytes.
+- `ioutil.WriteFile`: Escribe datos en un archivo.
+- `ioutil.TempFile`: Crea un archivo temporal.
+- `ioutil.TempDir`: Crea un directorio temporal.
 
-  - signal.Notify: Registra un canal para recibir notificaciones de señales específicas.
-  - signal.Ignore: Ignora las señales especificadas.
+## os/signal (Manejo de Señales del Sistema)
 
-- **path (manipulación de rutas de archivos y directorios)**
+- `signal.Notify`: Registra un canal para recibir notificaciones de señales específicas.
+- `signal.Ignore`: Ignora las señales especificadas.
 
-  - path.Base: Devuelve el último elemento de una ruta.
-  - path.Dir: Devuelve el directorio de una ruta.
-  - path.Ext: Devuelve la extensión de un archivo.
-  - path.Join: Une varios fragmentos de una ruta.
+## path (Manipulación de Rutas de Archivos y Directorios)
 
-- **mime (manipulación de tipos MIME)**
+- `path.Base`: Devuelve el último elemento de una ruta.
+- `path.Dir`: Devuelve el directorio de una ruta.
+- `path.Ext`: Devuelve la extensión de un archivo.
+- `path.Join`: Une varios fragmentos de una ruta.
 
-  - mime.TypeByExtension: Devuelve el tipo MIME basado en la extensión de un archivo.
+## mime (Manipulación de Tipos MIME)
 
-- **runtime/debug (depuración del entorno de ejecución)**
+- `mime.TypeByExtension`: Devuelve el tipo MIME basado en la extensión de un archivo.
 
-  - debug.PrintStack: Imprime el stack trace de las goroutines en ejecución.
-  - debug.ReadGCStats: Lee las estadísticas del recolector de basura.
+## runtime/debug (Depuración del Entorno de Ejecución)
 
-- **net (funciones de red)**
+- `debug.PrintStack`: Imprime el stack trace de las goroutines en ejecución.
+- `debug.ReadGCStats`: Lee las estadísticas del recolector de basura.
 
-  - net.Dial: Abre una conexión hacia una dirección remota (TCP, UDP, etc.).
-  - net.Listen: Crea un listener para aceptar conexiones.
-  - net.IP: Representa una dirección IP.
-  - net.ParseIP: Convierte una cadena en una dirección IP.
+## net (Funciones de Red)
 
-- **crypto/hmac (HMAC - hash-based message authentication code)**
+- `net.Dial`: Abre una conexión hacia una dirección remota (TCP, UDP, etc.).
+- `net.Listen`: Crea un listener para aceptar conexiones.
+- `net.IP`: Representa una dirección IP.
+- `net.ParseIP`: Convierte una cadena en una dirección IP.
 
-  - hmac.New: Crea un nuevo hash HMAC.
-  - hmac.Sum: Calcula el hash HMAC.
+## crypto/hmac (HMAC - Hash-Based Message Authentication Code)
 
-- **crypto/tls (cifrado TLS)**
+- `hmac.New`: Crea un nuevo hash HMAC.
+- `hmac.Sum`: Calcula el hash HMAC.
 
-  - tls.Listen: Crea un listener que acepta conexiones TLS.
-  - tls.Dial: Crea una conexión TLS hacia un servidor remoto.
+## crypto/tls (Cifrado TLS)
 
-- **net/rpc (remote procedure calls)**
+- `tls.Listen`: Crea un listener que acepta conexiones TLS.
+- `tls.Dial`: Crea una conexión TLS hacia un servidor remoto.
 
-  - rpc.Register: Registra un objeto para que sus métodos sean llamados remotamente.
-  - rpc.DialHTTP: Establece una conexión HTTP para realizar llamadas RPC.
+## net/rpc (Remote Procedure Calls)
 
-- **text/template (plantillas de texto)**
+- `rpc.Register`: Registra un objeto para que sus métodos sean llamados remotamente.
+- `rpc.DialHTTP`: Establece una conexión HTTP para realizar llamadas RPC.
 
-  - template.New: Crea una nueva plantilla.
-  - template.Parse: Analiza una plantilla a partir de una cadena.
-  - template.ParseFiles: Analiza archivos de plantillas.
-  - template.Execute: Ejecuta una plantilla y escribe la salida.
+## text/template (Plantillas de Texto)
 
-- **log/syslog (integración con el sistema de logs)**
+- `template.New`: Crea una nueva plantilla.
+- `template.Parse`: Analiza una plantilla a partir de una cadena.
+- `template.ParseFiles`: Analiza archivos de plantillas.
+- `template.Execute`: Ejecuta una plantilla y escribe la salida.
 
-  - syslog.New: Crea un nuevo logger que envía los logs al sistema syslog.
-  - syslog.Dial: Conecta y envía logs a un servidor syslog remoto.
+## log/syslog (Integración con el Sistema de Logs)
 
-- **database/sql (trabajo con bases de datos)**
+- `syslog.New`: Crea un nuevo logger que envía los logs al sistema syslog.
+- `syslog.Dial`: Conecta y envía logs a un servidor syslog remoto.
 
-  - sql.Open: Abre una conexión con una base de datos.
-  - sql.Query: Ejecuta una consulta SQL.
-  - sql.Exec: Ejecuta una instrucción SQL sin resultados de consulta.
+## database/sql (Trabajo con Bases de Datos)
 
-- **encoding/csv (lectura y escritura de archivos CSV)**
+- `sql.Open`: Abre una conexión con una base de datos.
+- `sql.Query`: Ejecuta una consulta SQL.
+- `sql.Exec`: Ejecuta una instrucción SQL sin resultados de consulta.
 
-  - csv.NewReader: Crea un lector para archivos CSV.
-  - csv.NewWriter: Crea un escritor para archivos CSV.
+## encoding/csv (Lectura y Escritura de Archivos CSV)
 
-- **sync/errgroup (sincronización de goroutines con manejo de errores)**
+- `csv.NewReader`: Crea un lector para archivos CSV.
+- `csv.NewWriter`: Crea un escritor para archivos CSV.
 
-  - errgroup.Group: Permite ejecutar múltiples goroutines y esperar su finalización, manejando errores de manera simple.
+## sync/errgroup (Sincronización de Goroutines con Manejo de Errores)
+
+- `errgroup.Group`: Permite ejecutar múltiples goroutines y esperar su finalización, manejando errores de manera simple.
+
+## encoding/binary (Codificación y Decodificación Binaria)
+
+- `binary.Write`: Escribe datos en un Writer en formato binario.
+- `binary.Read`: Lee datos de un Reader en formato binario.
+- `binary.BigEndian`: Orden de bytes en formato Big Endian.
+- `binary.LittleEndian`: Orden de bytes en formato Little Endian.
+
+## image (Manipulación de Imágenes)
+
+- `image.NewRGBA`: Crea una nueva imagen RGBA.
+- `image.NewGray`: Crea una nueva imagen en escala de grises.
+- `image.NewRGBA64`: Crea una nueva imagen RGBA de 16 bits por canal.
+- `image.NewPaletted`: Crea una nueva imagen paletizada.
+
+## image/color (Manipulación de Colores)
+
+- `color.RGBA`: Representa un color en el formato RGBA.
+- `color.Gray`: Representa un color en escala de grises.
+- `color.NRGBA`: Representa un color en el formato NRGBA con componentes normalizados.
+- `color.CMYK`: Representa un color en el formato CMYK.
+
+## image/draw (Dibujo en Imágenes)
+
+- `draw.Draw`: Dibuja una imagen en un destino.
+- `draw.Src`: Operación de dibujo que usa el contenido de la imagen fuente.
+- `draw.Over`: Operación de dibujo que combina la imagen fuente con la imagen de destino.
+
+## image/x (Codificación y Decodificación JPEG, PNG, etc.)
+
+- `jpeg.Encode`: Codifica una imagen en formato JPEG y la escribe en un Writer.
+- `jpeg.Decode`: Decodifica una imagen JPEG desde un Reader.
+- `png.Encode`: Codifica una imagen en formato PNG y la escribe en un Writer.
+- `png.Decode`: Decodifica una imagen PNG desde un Reader.
