--- a/Go/Documentación/3.EstructurasControl.md
+++ b/Go/Documentación/3.EstructurasControl.md
@@ -1,8 +1,10 @@
-# 3. Estructuras de control
+# 3. Estructuras de control en Go
 
 ## 3.1. Condicionales
 
-- **if: Evalúa una condición y ejecuta el bloque de código si la condición es verdadera.**
+- ### if
+
+  Evalúa una condición y ejecuta el bloque de código si la condición es verdadera.
 
   ```go
   if x > 10 {
@@ -11,7 +13,9 @@
 
   ```
 
-- **else if: Se usa junto con if para verificar múltiples condiciones.**
+- ### else if
+
+  Se usa junto con `if` para verificar múltiples condiciones.
 
   ```go
   if x > 10 {
@@ -22,7 +26,9 @@
 
   ```
 
-- **else: Se ejecuta si ninguna de las condiciones anteriores es verdadera.**
+- ### else
+
+  Se ejecuta si ninguna de las condiciones anteriores es verdadera.
 
   ```go
   if x > 10 {
@@ -33,7 +39,9 @@
 
   ```
 
-- **Switch: Selecciona entre múltiples opciones y ejecuta el bloque de código que coincide con el caso.**
+- ### Switch
+
+  Selecciona entre múltiples opciones y ejecuta el bloque de código que coincide con el caso.
 
   ```go
   switch day {
@@ -44,15 +52,18 @@
   default:
       fmt.Println("Día normal")
   }
+
   ```
 
 ---
 
 ## 3.3. Bucles
 
-- **2.1 for: El único bucle en Go. Puede actuar como un bucle for, while o do-while.**
+- ### for
 
-  - Bucle tradicional:
+  El único bucle en Go. Puede actuar como un bucle `for`, `while` o `do-while`.
+
+  - **Bucle tradicional:**
 
   ```go
   for i := 0; i < 5; i++ {
@@ -61,7 +72,7 @@
 
   ```
 
-  - Bucle con condición (como while):
+  - **Bucle con condición (como while):**
 
   ```go
   i := 0
@@ -72,7 +83,7 @@
 
   ```
 
-  - Bucle infinito (como do-while)
+  - **Bucle infinito (como do-while)**
 
   ```go
   for {
@@ -82,7 +93,9 @@
 
   ```
 
-- **2.1 for range: Itera sobre elementos en una colección (arrays, slices, maps, strings) y devuelve el índice y el valor del elemento.**
+- ### for range
+
+  Itera sobre elementos en una colección (arrays, slices, maps, strings) y devuelve el índice y el valor del elemento.
 
   ```go
   // Iterar sobre un slice
@@ -104,9 +117,13 @@
   }
   ```
 
+---
+
 ## 3.4. Control de Flujo
 
-- **break: Sale de un bucle o switch.**
+- ### break
+
+  Sale de un bucle o `switch`.
 
   ```go
   for i := 0; i < 10; i++ {
@@ -118,7 +135,9 @@
 
   ```
 
-- **continue: Omite el resto del código en el bucle actual y pasa a la siguiente iteración.**
+- ### continue
+
+  Omite el resto del código en el bucle actual y pasa a la siguiente iteración.
 
   ```go
   for i := 0; i < 10; i++ {
@@ -129,7 +148,9 @@
   }
   ```
 
-- **return: Sale de una función y opcionalmente devuelve un valor.**
+- ### return
+
+  Sale de una función y opcionalmente devuelve un valor.
 
   ```go
   func add(a int, b int) int {
@@ -138,7 +159,9 @@
 
   ```
 
-- **goto: Salta a una etiqueta dentro del mismo bloque de código. Su uso está generalmente desaconsejado debido a que puede hacer que el código sea más difícil de seguir.**
+- ### goto
+
+  Salta a una etiqueta dentro del mismo bloque de código. Su uso está generalmente desaconsejado debido a que puede hacer que el código sea más difícil de seguir.
 
   ```go
   func main() {
