--- a/Go/Documentación/4.Funciones&Procedimientos.md
+++ b/Go/Documentación/4.Funciones&Procedimientos.md
@@ -2,7 +2,7 @@
 
 ## 4.1. Definición de Funciones
 
-- **Definición de una función:**
+- ### Definición de una función
 
   Se utiliza la palabra clave func, seguida del nombre de la función, parámetros y tipo de retorno.
 
@@ -13,7 +13,7 @@
 
   ```
 
-- **Parámetros:**
+- ### Parámetros
 
   Los parámetros se definen entre paréntesis y pueden ser múltiples.
 
@@ -24,7 +24,7 @@
 
   ```
 
-- **Tipos de retorno:**
+- ### Tipos de retorno
 
   Una función puede retornar uno o varios valores.
 
@@ -37,7 +37,7 @@
 
   ```
 
-- **Valores por defecto:**
+- ### Valores por defecto
 
   Go no soporta valores por defecto para parámetros. Todos los argumentos deben ser proporcionados al llamar a la función.
 
@@ -45,10 +45,10 @@
 
 ## 4.2. Ámbito de Funciones
 
-- **Alcance local y global:**
+- ### Alcance local y global
 
-  - Local: Las variables declaradas dentro de una función solo son accesibles dentro de esa función.
-  - Global: Las variables declaradas fuera de una función son accesibles en cualquier parte del archivo (y en otros archivos si se exportan).
+  - **Local:** Las variables declaradas dentro de una función solo son accesibles dentro de esa función.
+  - **Global:** Las variables declaradas fuera de una función son accesibles en cualquier parte del archivo (y en otros archivos si se exportan).
 
     ```go
     var globalVar = 10 // Variable global
@@ -60,7 +60,7 @@
 
     ```
 
-- **Variables estáticas:**
+- ### Variables estáticas
 
   Go no tiene variables estáticas en el sentido tradicional de C/C++. Sin embargo, puedes usar variables globales para mantener el estado entre llamadas a funciones.
 
@@ -68,7 +68,7 @@
 
 ## 4.3. Valor y Referencia
 
-- **Paso por valor:**
+- ### Paso por valor
 
   En Go, los parámetros se pasan a las funciones por valor, lo que significa que se pasa una copia del valor. Los cambios en el parámetro dentro de la función no afectan al valor original fuera de la función.
 
@@ -85,9 +85,9 @@
 
   ```
 
-- **Paso por referencia usando punteros:**
+- ### Paso por referencia usando punteros
 
-  Para modificar el valor original dentro de una función, se puede pasar un puntero al valor en lugar del valor en sí. Esto se hace usando el operador & para obtener la dirección de una variable y el operador \* para desreferenciar el puntero.
+  Para modificar el valor original dentro de una función, se puede pasar un puntero al valor en lugar del valor en sí. Esto se hace usando el operador `&` para obtener la dirección de una variable y el operador `*` para desreferenciar el puntero.
 
   ```go
   func incrementar(valor *int) {
@@ -137,7 +137,7 @@ func sumaFloat(a float64, b float64) float64 {
 
 ## 4.6. Funciones Anónimas (Lambda)
 
-- **Funciones anónimas:**
+- ### Funciones anónimas
 
   Las funciones anónimas, también conocidas como lambdas, son funciones sin nombre. Se utilizan para definir funciones inline.
 
@@ -151,7 +151,7 @@ func sumaFloat(a float64, b float64) float64 {
 
   ```
 
-- **Closures:**
+- ### Closures
 
   Un closure es una función anónima que captura y puede modificar variables de su entorno.
 
@@ -291,3 +291,15 @@ func main() {
 }
 
 ```
+
+---
+
+## 4.11. Iteradores e Iterables
+
+- ### Iterables
+
+  Es cualquier objeto sobre el cual se puede iterar, es decir, recorrer sus elementos uno por uno. En Go, los slices, mapas, arrays y canales son ejemplos de iterables.
+
+- ### Iteradores
+
+  Es un objeto que proporciona una forma de acceder secuencialmente a los elementos de un iterable. En Go, no tenemos iteradores en el sentido estricto de otros lenguajes, pero podemos simular su comportamiento.
