--- a/Go/Documentación/5.EstructurasDatos.md
+++ b/Go/Documentación/5.EstructurasDatos.md
@@ -4,7 +4,7 @@
 
 Los arrays son estructuras de tamaño fijo que almacenan elementos del mismo tipo.
 
-- **Arreglos unidimensionales:**
+- ### Arreglos unidimensionales
 
   ```go
   var arreglo [5]int // Arreglo de 5 enteros
@@ -12,7 +12,7 @@ Los arrays son estructuras de tamaño fijo que almacenan elementos del mismo tip
 
   ```
 
-- **Arreglos multidimensionales:**
+- ### Arreglos multidimensionales
 
   ```go
   var matriz [3][4]int // Matriz de 3x4 enteros
@@ -74,7 +74,7 @@ valor := mapa["clave"]
 
 Las pilas siguen el principio Last In, First Out (LIFO), donde el último elemento agregado es el primero en ser eliminado.
 
-- **Implementación con arrays:**
+- ### Implementación con arrays
 
   ```go
   type Pila struct {
@@ -95,16 +95,16 @@ Las pilas siguen el principio Last In, First Out (LIFO), donde el último elemen
   }
   ```
 
-- **Implementación con listas:**
+- ### Implementación con listas
 
   Alternativamente, una pila puede ser implementada usando una lista enlazada.
 
-- **Operaciones básicas:**
+- #### Operaciones básicas (Pilas)
 
-  - push(elemento): Agrega un elemento a la pila.
-  - pop(): Elimina y devuelve el último elemento agregado.
-  - top(): Devuelve el último elemento agregado sin eliminarlo.
-  - empty(): Indica si la pila está vacía.
+  - `push(elemento)`: Agrega un elemento a la pila.
+  - `pop()`: Elimina y devuelve el último elemento agregado.
+  - `top()`: Devuelve el último elemento agregado sin eliminarlo.
+  - `empty()`: Indica si la pila está vacía.
 
 ---
 
@@ -112,7 +112,7 @@ Las pilas siguen el principio Last In, First Out (LIFO), donde el último elemen
 
 Las colas siguen el principio First In, First Out (FIFO), donde el primer elemento agregado es el primero en ser eliminado.
 
-- **Colas simples:**
+- ### Colas simples
 
   ```go
   type Cola struct {
@@ -134,7 +134,7 @@ Las colas siguen el principio First In, First Out (FIFO), donde el primer elemen
 
   ```
 
-- **Colas dobles (Deque):**
+- ### Colas dobles (Deque)
 
   ```go
   type Deque struct {
@@ -169,7 +169,7 @@ Las colas siguen el principio First In, First Out (FIFO), donde el primer elemen
 
   ```
 
-- **Colas de prioridad:**
+- ### Colas de prioridad
 
   ```go
   import "container/heap"
@@ -199,12 +199,12 @@ Las colas siguen el principio First In, First Out (FIFO), donde el primer elemen
 
   ```
 
-- **Operaciones básicas:**
+- ### Operaciones básicas (Colas)
 
-  - enqueue(elemento): Agrega un elemento a la cola.
-  - dequeue(): Elimina y devuelve el primer elemento agregado.
-  - front(): Devuelve el primer elemento agregado sin eliminarlo.
-  - empty(): Indica si la cola está vacía.
+  - `enqueue(elemento)`: Agrega un elemento a la cola.
+  - `dequeue()`: Elimina y devuelve el primer elemento agregado.
+  - `front()`: Devuelve el primer elemento agregado sin eliminarlo.
+  - `empty()`: Indica si la cola está vacía.
 
 ---
 
@@ -212,7 +212,7 @@ Las colas siguen el principio First In, First Out (FIFO), donde el primer elemen
 
 Una lista enlazada se puede crear usando structs y punteros.
 
-- **Listas enlazadas simples:**
+- ### Listas enlazadas simples
 
   ```go
   type Nodo struct {
@@ -222,7 +222,7 @@ Una lista enlazada se puede crear usando structs y punteros.
 
   ```
 
-- **Listas dobles enlazadas:**
+- ### Listas dobles enlazadas
 
   ```go
   type NodoDoble struct {
@@ -233,7 +233,7 @@ Una lista enlazada se puede crear usando structs y punteros.
 
   ```
 
-- **Listas circulares:**
+- ### Listas circulares
 
   ```go
   type NodoCircular struct {
@@ -244,13 +244,13 @@ Una lista enlazada se puede crear usando structs y punteros.
 
 ---
 
-## 5.8. Conjuntos
+## 5.8. Conjuntos(Sets)
 
 Un conjunto es una colección de elementos únicos, donde no se permiten duplicados. En muchas implementaciones de lenguajes de programación, los conjuntos no tienen un orden definido entre sus elementos.
 
 Go no tiene un tipo de conjunto (set) incorporado, pero puedes implementarlo usando mapas.
 
-- **Conjuntos matemáticos:**
+- ### Conjuntos matemáticos
 
   ```go
   type Conjunto map[int]struct{}
@@ -270,7 +270,7 @@ Go no tiene un tipo de conjunto (set) incorporado, pero puedes implementarlo usa
 
   ```
 
-- **Conjuntos no ordenados:**
+- ### Conjuntos no ordenados
 
   Implementados usando mapas (map), los conjuntos son no ordenados.
 
@@ -280,7 +280,7 @@ Go no tiene un tipo de conjunto (set) incorporado, pero puedes implementarlo usa
 
 Un árbol es una estructura de datos jerárquica que consiste en nodos conectados por aristas. Cada nodo puede tener un número variable de nodos hijos. Un árbol no tiene ciclos, lo que significa que no hay una forma de empezar desde un nodo y volver al mismo a través de las aristas.
 
-- **Árbol binario:**
+- ### Árbol binario
 
   ```go
   type Nodo struct {
@@ -290,7 +290,7 @@ Un árbol es una estructura de datos jerárquica que consiste en nodos conectado
   }
   ```
 
-- **Árbol AVL:**
+- ### Árbol AVL
 
   ```go
   type NodoAVL struct {
@@ -301,25 +301,28 @@ Un árbol es una estructura de datos jerárquica que consiste en nodos conectado
   }
   ```
 
-- **Árbol B:**
+- ### Árbol B
 
   Un árbol B es un árbol auto-balanceado que mantiene datos ordenados y permite operaciones en tiempo logarítmico.
 
-- **Árbol rojo-negro:**
+- ### Árbol rojo-negro
 
   Un árbol rojo-negro es otro tipo de árbol binario auto-balanceado.
 
 ## 5.10. Grafos
 
-- **Grafos dirigidos:**
+Los grafos consisten en nodos y aristas y pueden ser dirigidos o no dirigidos.
+
+- ### Grafos dirigidos
 
   ```go
   type GrafoDirigido struct {
       nodos map[string][]string
   }
+
   ```
 
-- **Grafos no dirigidos:**
+- ### Grafos no dirigidos
 
   ```go
   type GrafoNoDirigido struct {
@@ -328,14 +331,14 @@ Un árbol es una estructura de datos jerárquica que consiste en nodos conectado
 
   ```
 
-- **Matrices de adyacencia:**
+- ### Matrices de adyacencia
 
   ```go
   type MatrizAdyacencia [][]bool
 
   ```
 
-- **Listas de adyacencia:**
+- ### Listas de adyacencia
 
   ```go
   type ListaAdyacencia map[string][]string
@@ -346,132 +349,132 @@ Un árbol es una estructura de datos jerárquica que consiste en nodos conectado
 
 Los genéricos en Go permiten escribir funciones y tipos que pueden trabajar con diferentes tipos de datos sin necesidad de duplicar el código para cada tipo.
 
-- **Funciones genéricas:**
+### Funciones genéricas
 
-  Puedes definir una función genérica utilizando el nuevo tipo de parámetro type y el operador de tipo any para permitir cualquier tipo.
+Puedes definir una función genérica utilizando el nuevo tipo de parámetro type y el operador de tipo any para permitir cualquier tipo.
 
-  ```go
-  package main
+```go
+package main
 
-  import "fmt"
+import "fmt"
 
-  // Función genérica que intercambia dos valores de cualquier tipo
-  func Intercambiar[T any](a, b T) (T, T) {
-      return b, a
-  }
+// Función genérica que intercambia dos valores de cualquier tipo
+func Intercambiar[T any](a, b T) (T, T) {
+    return b, a
+}
 
-  func main() {
-      a, b := 1, 2
-      x, y := Intercambiar(a, b)
-      fmt.Println(x, y) // Imprime 2 1
+func main() {
+    a, b := 1, 2
+    x, y := Intercambiar(a, b)
+    fmt.Println(x, y) // Imprime 2 1
 
-      str1, str2 := "hello", "world"
-      s1, s2 := Intercambiar(str1, str2)
-      fmt.Println(s1, s2) // Imprime world hello
-  }
+    str1, str2 := "hello", "world"
+    s1, s2 := Intercambiar(str1, str2)
+    fmt.Println(s1, s2) // Imprime world hello
+}
 
-  ```
+```
 
-- **Tipos genéricos:**
+### Tipos genéricos
 
-  Puedes definir un tipo genérico con el uso de parámetros de tipo. Los parámetros de tipo se definen dentro de corchetes angulares <>.
+Puedes definir un tipo genérico con el uso de parámetros de tipo. Los parámetros de tipo se definen dentro de corchetes angulares <>.
 
-  ```go
-  package main
+```go
+package main
 
-  import "fmt"
+import "fmt"
 
-  // Tipo genérico para una pila
-  type Pila[T any] struct {
-      elementos []T
-  }
+// Tipo genérico para una pila
+type Pila[T any] struct {
+    elementos []T
+}
 
-  func (p *Pila[T]) Apilar(valor T) {
-      p.elementos = append(p.elementos, valor)
-  }
+func (p *Pila[T]) Apilar(valor T) {
+    p.elementos = append(p.elementos, valor)
+}
 
-  func (p *Pila[T]) Desapilar() T {
-      if len(p.elementos) == 0 {
-          var zero T
-          return zero // O manejar el error
-      }
-      valor := p.elementos[len(p.elementos)-1]
-      p.elementos = p.elementos[:len(p.elementos)-1]
-      return valor
-  }
+func (p *Pila[T]) Desapilar() T {
+    if len(p.elementos) == 0 {
+        var zero T
+        return zero // O manejar el error
+    }
+    valor := p.elementos[len(p.elementos)-1]
+    p.elementos = p.elementos[:len(p.elementos)-1]
+    return valor
+}
 
-  func main() {
-      p := Pila[int]{}
-      p.Apilar(10)
-      fmt.Println(p.Desapilar()) // Imprime 10
+func main() {
+    p := Pila[int]{}
+    p.Apilar(10)
+    fmt.Println(p.Desapilar()) // Imprime 10
 
-      q := Pila[string]{}
-      q.Apilar("hola")
-      fmt.Println(q.Desapilar()) // Imprime hola
-  }
+    q := Pila[string]{}
+    q.Apilar("hola")
+    fmt.Println(q.Desapilar()) // Imprime hola
+}
 
-  ```
+```
 
-- **Restricciones de tipo:**
+### Restricciones de tipo
 
-  Puedes restringir los tipos genéricos a ciertos tipos mediante interfaces. Esto permite especificar qué tipos son válidos para un parámetro genérico.
+Puedes restringir los tipos genéricos a ciertos tipos mediante interfaces. Esto permite especificar qué tipos son válidos para un parámetro genérico.
 
-  ```go
-  package main
+```go
+package main
 
-  import "fmt"
+import "fmt"
 
-  // Restricción para tipos que son comparables
-  type Comparador interface {
-      ~int | ~float64 | ~string
-  }
+// Restricción para tipos que son comparables
+type Comparador interface {
+    ~int | ~float64 | ~string
+}
 
-  // Función que compara dos valores
-  func Comparar[T Comparador](a, b T) bool {
-      return a == b
-  }
+// Función que compara dos valores
+func Comparar[T Comparador](a, b T) bool {
+    return a == b
+}
 
-  func main() {
-      fmt.Println(Comparar(1, 1))          // Imprime true
-      fmt.Println(Comparar(1.5, 1.5))      // Imprime true
-      fmt.Println(Comparar("hola", "hola")) // Imprime true
-      fmt.Println(Comparar("hola", "mundo")) // Imprime false
-  }
+func main() {
+    fmt.Println(Comparar(1, 1))          // Imprime true
+    fmt.Println(Comparar(1.5, 1.5))      // Imprime true
+    fmt.Println(Comparar("hola", "hola")) // Imprime true
+    fmt.Println(Comparar("hola", "mundo")) // Imprime false
+}
 
-  ```
+```
 
-- **Uso en estructuras de datos:**
+### Uso en estructuras de datos
 
-  Puedes usar genéricos en estructuras de datos para hacerlas más flexibles. Por ejemplo, puedes definir una lista genérica que puede contener cualquier tipo de elemento.
+Puedes usar genéricos en estructuras de datos para hacerlas más flexibles. Por ejemplo, puedes definir una lista genérica que puede contener cualquier tipo de elemento.
 
-  ```go
-  package main
+```go
+package main
 
-  import "fmt"
+import "fmt"
 
-  // Estructura genérica para una lista
-  type Lista[T any] struct {
-      elementos []T
-  }
+// Estructura genérica para una lista
+type Lista[T any] struct {
+    elementos []T
+}
 
-  func (l *Lista[T]) Agregar(elemento T) {
-      l.elementos = append(l.elementos, elemento)
-  }
+func (l *Lista[T]) Agregar(elemento T) {
+    l.elementos = append(l.elementos, elemento)
+}
 
-  func (l *Lista[T]) Obtener(index int) T {
-      return l.elementos[index]
-  }
+func (l *Lista[T]) Obtener(index int) T {
+    return l.elementos[index]
+}
 
-  func main() {
-      l := Lista[int]{}
-      l.Agregar(10)
-      l.Agregar(20)
-      fmt.Println(l.Obtener(0)) // Imprime 10
+func main() {
+    l := Lista[int]{}
+    l.Agregar(10)
+    l.Agregar(20)
+    fmt.Println(l.Obtener(0)) // Imprime 10
 
-      m := Lista[string]{}
-      m.Agregar("hola")
-      m.Agregar("mundo")
-      fmt.Println(m.Obtener(1)) // Imprime mundo
-  }
+    m := Lista[string]{}
+    m.Agregar("hola")
+    m.Agregar("mundo")
+    fmt.Println(m.Obtener(1)) // Imprime mundo
+}
 
-  ```
+```
