--- a/Go/Documentación/6.Algoritmos.md
+++ b/Go/Documentación/6.Algoritmos.md
@@ -2,7 +2,7 @@
 
 ## 6.1. Algoritmos de Ordenación
 
-- **Bubble Sort:**
+- ### Bubble Sort
 
   Bubble Sort es un algoritmo de ordenación sencillo que compara cada par de elementos adyacentes y los intercambia si están en el orden incorrecto. Este proceso se repite hasta que la lista esté ordenada.
 
@@ -20,7 +20,7 @@
 
   ```
 
-- **Merge Sort:**
+- ### Merge Sort
 
   Merge Sort es un algoritmo de ordenación basado en la técnica de divide y vencerás. Divide el array en mitades, ordena cada mitad y luego las combina.
 
@@ -54,7 +54,7 @@
 
   ```
 
-- **Quick Sort:**
+- ### Quick Sort
 
   Quick Sort es otro algoritmo de ordenación basado en divide y vencerás que utiliza un pivote para dividir el array en dos partes.
 
@@ -80,7 +80,7 @@
 
   ```
 
-- **Insertion Sort:**
+- ### Insertion Sort
 
   Insertion Sort construye la lista ordenada uno a uno, insertando elementos en su posición correcta.
 
@@ -99,20 +99,20 @@
 
   ```
 
-- **Ordenación con el paquete sort:**
+- ### Ordenación con el paquete sort
 
   El paquete sort proporciona funciones para ordenar slices de tipos de datos integrados como enteros, strings, floats, etc.
 
-  - sort.Ints(slice): Ordena un slice de enteros en orden ascendente.
-  - sort.Strings(slice): Ordena un slice de strings en orden lexicográfico (alfabético).
-  - sort.Floats(slice): Ordena un slice de floats en orden ascendente.
-  - sort.Reverse(slice): Ordena de manera invertida.
+  - `sort.Ints(slice)`: Ordena un slice de enteros en orden ascendente.
+  - `sort.Strings(slice)`: Ordena un slice de strings en orden lexicográfico (alfabético).
+  - `sort.Floats(slice)`: Ordena un slice de floats en orden ascendente.
+  - `sort.Reverse(slice)`: Ordena de manera invertida.
 
 ---
 
 ## 6.2. Algoritmos de Búsqueda
 
-- **Búsqueda Binaria:**
+- ### Búsqueda Binaria
 
   La búsqueda binaria es un algoritmo eficiente para encontrar un elemento en una lista ordenada. Divide el rango de búsqueda a la mitad en cada paso.
 
@@ -134,7 +134,7 @@
 
   ```
 
-- **Búsqueda Lineal:**
+- ### Búsqueda Lineal
 
   La búsqueda lineal verifica cada elemento de una lista hasta encontrar el objetivo.
 
@@ -150,63 +150,62 @@
 
   ```
 
-- **Búsqueda en Grafos (DFS y BFS):**
+- ### Búsqueda en Grafos (DFS y BFS)
 
   - DFS (Depth-First Search) explora tan profundo como sea posible antes de retroceder.
 
-  ```go
-  // dfs realiza una búsqueda en profundidad (Depth-First Search) en el grafo.
-  func dfs(graph map[string][]string, start string, visited map[string]bool) {
-      if visited[start] {
-          return // Si el nodo ya ha sido visitado, no hacer nada y retornar
-      }
-      visited[start] = true // Marcar el nodo actual como visitado
-      fmt.Println(start)   // Imprimir el nodo actual
+    ```go
+    // dfs realiza una búsqueda en profundidad (Depth-First Search) en el grafo.
+    func dfs(graph map[string][]string, start string, visited map[string]bool) {
+        if visited[start] {
+            return // Si el nodo ya ha sido visitado, no hacer nada y retornar
+        }
+        visited[start] = true // Marcar el nodo actual como visitado
+        fmt.Println(start)   // Imprimir el nodo actual
 
-      // Recorrer todos los vecinos del nodo actual
-      for _, neighbor := range graph[start] {
-          dfs(graph, neighbor, visited) // Llamada recursiva para el vecino
-      }
-  }
+        // Recorrer todos los vecinos del nodo actual
+        for _, neighbor := range graph[start] {
+            dfs(graph, neighbor, visited) // Llamada recursiva para el vecino
+        }
+    }
 
-  ```
+    ```
 
   - BFS (Breadth-First Search) explora los vecinos de un nodo antes de pasar a los nodos de nivel siguiente.
 
-  ```go
-  import "container/list"
+    ```go
+    import "container/list"
 
-  // bfs realiza una búsqueda en amplitud (Breadth-First Search) en el grafo.
-  func bfs(graph map[string][]string, start string) {
-      visited := make(map[string]bool) // Mapa para seguir los nodos visitados
-      queue := list.New()              // Cola para manejar el orden de visita
-      queue.PushBack(start)           // Encolar el nodo de inicio
-      visited[start] = true           // Marcar el nodo de inicio como visitado
+    // bfs realiza una búsqueda en amplitud (Breadth-First Search) en el grafo.
+    func bfs(graph map[string][]string, start string) {
+        visited := make(map[string]bool) // Mapa para seguir los nodos visitados
+        queue := list.New()              // Cola para manejar el orden de visita
+        queue.PushBack(start)           // Encolar el nodo de inicio
+        visited[start] = true           // Marcar el nodo de inicio como visitado
 
-      // Mientras haya nodos en la cola
-      for queue.Len() > 0 {
-          element := queue.Front()     // Obtener el primer nodo en la cola
-          queue.Remove(element)       // Desencolar el nodo
-          node := element.Value.(string) // Convertir el valor a cadena
-          fmt.Println(node)           // Imprimir el nodo actual
+        // Mientras haya nodos en la cola
+        for queue.Len() > 0 {
+            element := queue.Front()     // Obtener el primer nodo en la cola
+            queue.Remove(element)       // Desencolar el nodo
+            node := element.Value.(string) // Convertir el valor a cadena
+            fmt.Println(node)           // Imprimir el nodo actual
 
-          // Recorrer todos los vecinos del nodo actual
-          for _, neighbor := range graph[node] {
-              if !visited[neighbor] {
-                  visited[neighbor] = true // Marcar el vecino como visitado
-                  queue.PushBack(neighbor) // Encolar el vecino
-              }
-          }
-      }
-  }
-
-  ```
+            // Recorrer todos los vecinos del nodo actual
+            for _, neighbor := range graph[node] {
+                if !visited[neighbor] {
+                    visited[neighbor] = true // Marcar el vecino como visitado
+                    queue.PushBack(neighbor) // Encolar el vecino
+                }
+            }
+        }
+    }
+    ```
 
 ---
 
 ## 5.3. Algoritmos de Recursión
 
-- **Fibonacci:**
+- ### Fibonacci
 
   La secuencia de Fibonacci es una serie en la que cada número es la suma de los dos anteriores.
 
@@ -220,7 +219,7 @@
 
   ```
 
-- **Torres de Hanói:**
+- ### Torres de Hanói
 
   El problema de las Torres de Hanói consiste en mover discos de una torre a otra siguiendo ciertas reglas.
 
@@ -241,7 +240,7 @@
 
 ## 5.4. Algoritmos de Optimización
 
-- **Programación Dinámica:**
+- ### Programación Dinámica
 
   La programación dinámica se utiliza para resolver problemas de optimización dividiéndolos en subproblemas más pequeños.
 
@@ -272,7 +271,7 @@
 
   ```
 
-- **Backtracking:**
+- ### Backtracking
 
   Backtracking es una técnica para encontrar soluciones a problemas complejos construyendo soluciones incrementales y deshaciendo pasos cuando se detecta que una solución no es válida.
 
@@ -316,7 +315,7 @@
 
   ```
 
-- **Algoritmo de Dijkstra:**
+- ### Algoritmo de Dijkstra
 
   El algoritmo de Dijkstra encuentra el camino más corto desde un nodo fuente a todos los demás nodos en un grafo ponderado.
 
