--- a/Go/Documentación/7.ManejoMemorio.md
+++ b/Go/Documentación/7.ManejoMemorio.md
@@ -2,7 +2,7 @@
 
 ## 7.1. Asignación de Memoria
 
-- **Variables Estáticas:**
+- ### Variables Estáticas
 
   Las variables estáticas tienen un tiempo de vida igual al de la aplicación. Su memoria se asigna una vez y no se libera hasta que la aplicación termine.
 
@@ -11,7 +11,7 @@
 
   ```
 
-- **Variables Automáticas:**
+- ### Variables Automáticas
 
   Las variables automáticas, o variables locales, son aquellas que se asignan en la pila de ejecución y tienen un tiempo de vida limitado al alcance de la función o bloque en el que se definen.
 
@@ -23,7 +23,7 @@
 
   ```
 
-- **Variables Dinámicas:**
+- ### Variables Dinámicas
 
   La memoria dinámica se asigna en el heap. Las variables dinámicas pueden ser creadas en tiempo de ejecución y su vida útil puede superar el alcance de las funciones.
 
@@ -40,42 +40,40 @@
 
 ## 7.2. Punteros
 
-- Definición: Un puntero es una variable que almacena la dirección de otra variable en la memoria. Permite acceder y modificar el valor de la variable a la que apunta.
-- Referencia: Utiliza & para obtener la dirección de una variable.
-- Desreferencia: Utiliza \* para acceder al valor almacenado en la dirección a la que apunta un puntero.
+- **Definición:** Un puntero es una variable que almacena la dirección de otra variable en la memoria. Permite acceder y modificar el valor de la variable a la que apunta.
+- **Referencia:** Utiliza `&` para obtener la dirección de una variable.
+- **Desreferencia:** Utiliza `*` para acceder al valor almacenado en la dirección a la que apunta un puntero.
 
-```go
-func main() {
-    var x int = 10
-    var ptr *int = &x // `ptr` es un puntero a `x`
+  ```go
+  func main() {
+      var x int = 10
+      var ptr *int = &x // `ptr` es un puntero a `x`
 
-    fmt.Println(*ptr) // Imprime el valor al que apunta `ptr`, que es 10
+      fmt.Println(*ptr) // Imprime el valor al que apunta `ptr`, que es 10
 
-    *ptr = 20 // Modifica el valor de `x` a través del puntero
-    fmt.Println(x) // Imprime el nuevo valor de `x`, que es 20
-}
+      *ptr = 20 // Modifica el valor de `x` a través del puntero
+      fmt.Println(x) // Imprime el nuevo valor de `x`, que es 20
+  }
 
-```
+  ```
 
 ---
 
 ## 7.3. Optimización de Memoria
 
-- **Técnicas para Reducir el Uso de Memoria:**
+### Técnicas para Reducir el Uso de Memoria
 
-  - Reutilización de Objetos:
-    Evitar la creación constante de nuevos objetos. Reutilizar objetos cuando sea posible puede reducir el uso de memoria y mejorar el rendimiento.
-  - Uso Eficiente de Slices y Maps:
-    -Slices: Ajustar la capacidad de slices para evitar la asignación excesiva de memoria.
-    -Maps: Establecer una capacidad inicial adecuada para maps para minimizar las reasignaciones internas.
-  - Optimización de Estructuras de Datos:
-    Elegir estructuras de datos adecuadas para el problema puede reducir significativamente el uso de memoria. Por ejemplo, usar un map en lugar de un slice para búsquedas rápidas.
-  - Profiling:
-    Utilizar herramientas de profiling para identificar cuellos de botella en el uso de memoria y ajustar el código en consecuencia.
-  - Evitar Referencias Cíclicas:
-    En programas complejos, evitar referencias cíclicas entre objetos puede ayudar a que el recolector de basura funcione más eficientemente.
-  - Ajustes del Recolector de Basura:
-    En aplicaciones críticas en términos de rendimiento, es posible ajustar la configuración del recolector de basura para equilibrar el rendimiento y el uso de memoria.
+- **Reutilización de Objetos:**
+  Evitar la creación constante de nuevos objetos. Reutilizar objetos cuando sea posible puede reducir el uso de memoria y mejorar el rendimiento.
+- **Uso Eficiente de Slices y Maps:** Ajustar la capacidad de slices para evitar la asignación excesiva de memoria. Establecer una capacidad inicial adecuada para maps para minimizar las reasignaciones internas.
+- **Optimización de Estructuras de Datos:**
+  Elegir estructuras de datos adecuadas para el problema puede reducir significativamente el uso de memoria. Por ejemplo, usar un map en lugar de un slice para búsquedas rápidas.
+- **Profiling:**
+  Utilizar herramientas de profiling para identificar cuellos de botella en el uso de memoria y ajustar el código en consecuencia.
+- **Evitar Referencias Cíclicas:**
+  En programas complejos, evitar referencias cíclicas entre objetos puede ayudar a que el recolector de basura funcione más eficientemente.
+- **Ajustes del Recolector de Basura:**
+  En aplicaciones críticas en términos de rendimiento, es posible ajustar la configuración del recolector de basura para equilibrar el rendimiento y el uso de memoria.
 
   ```go
   // Ejemplo de optimización en la capacidad de un slice
