--- a/Go/Documentación/8.OPP.md
+++ b/Go/Documentación/8.OPP.md
@@ -4,137 +4,150 @@ Go no sigue el paradigma clásico de programación orientada a objetos como en o
 
 ## 8.1. Clases y Objetos
 
-- Structs: En Go, los structs se utilizan en lugar de clases. Un struct es una colección de campos que pueden ser de diferentes tipos.
-- Instanciación: Puedes crear instancias de structs y definir métodos asociados a ellos.
+- ### Structs
 
-```go
-type Persona struct {
-    Nombre string
-    Edad   int
-}
+  En Go, los structs se utilizan en lugar de clases. Un `struct` es una colección de campos que pueden ser de diferentes tipos.
 
-func (p *Persona) Saludar() {
-    fmt.Printf("Hola, mi nombre es %s y tengo %d años.\n", p.Nombre, p.Edad)
-}
+- ### Instanciación
 
-func main() {
-    p := Persona{Nombre: "Ana", Edad: 25}
-    p.Saludar() // Llama al método Saludar de la instancia p
-}
+  Puedes crear instancias de structs y definir métodos asociados a ellos.
 
-```
+  ```go
+  type Persona struct {
+      Nombre string
+      Edad   int
+  }
+
+  func (p *Persona) Saludar() {
+      fmt.Printf("Hola, mi nombre es %s y tengo %d años.\n", p.Nombre, p.Edad)
+  }
+
+  func main() {
+      p := Persona{Nombre: "Ana", Edad: 25}
+      p.Saludar() // Llama al método Saludar de la instancia p
+  }
+
+  ```
 
 ---
 
 ## 8.2 Herencia
 
-- Composición: Go no soporta herencia de clases como en otros lenguajes, pero permite la composición de structs. Esto significa que puedes incluir un struct dentro de otro, logrando una forma de reutilización de código similar a la herencia.
+- ### Composición
 
-```go
-type Animal struct {
-    Nombre string
-}
+  Go no soporta herencia de clases como en otros lenguajes, pero permite la composición de structs. Esto significa que puedes incluir un `struct` dentro de otro, logrando una forma de reutilización de código similar a la herencia.
 
-func (a *Animal) HacerSonido() {
-    fmt.Println("El animal hace un sonido.")
-}
+  ```go
+  type Animal struct {
+      Nombre string
+  }
 
-type Perro struct {
-    Animal // Composición: Perro "hereda" de Animal
-    Raza   string
-}
+  func (a *Animal) HacerSonido() {
+      fmt.Println("El animal hace un sonido.")
+  }
 
-func (p *Perro) HacerSonido() {
-    fmt.Println("El perro ladra.")
-}
+  type Perro struct {
+      Animal // Composición: Perro "hereda" de Animal
+      Raza   string
+  }
 
-func main() {
-    p := Perro{Animal: Animal{Nombre: "Rex"}, Raza: "Labrador"}
-    p.HacerSonido() // Llama al método HacerSonido de Perro
-}
+  func (p *Perro) HacerSonido() {
+      fmt.Println("El perro ladra.")
+  }
 
-```
+  func main() {
+      p := Perro{Animal: Animal{Nombre: "Rex"}, Raza: "Labrador"}
+      p.HacerSonido() // Llama al método HacerSonido de Perro
+  }
+
+  ```
 
 ---
 
 ## 8.3 Polimorfismo
 
-- Interfaces: Go utiliza interfaces para lograr el polimorfismo. Una interfaz es un tipo que define un conjunto de métodos sin implementar. Los structs pueden implementar estas interfaces al proporcionar las implementaciones de los métodos definidos en la interfaz.
+- ### Interfaces (Polimorfismo)
 
-```go
-type Animal interface {
-    HacerSonido()
-}
+  Go utiliza interfaces para lograr el polimorfismo. Una interfaz es un tipo que define un conjunto de métodos sin implementar. Los structs pueden implementar estas interfaces al proporcionar las implementaciones de los métodos definidos en la interfaz.
 
-type Gato struct {
-    Nombre string
-}
+  ```go
+  type Animal interface {
+      HacerSonido()
+  }
 
-func (g *Gato) HacerSonido() {
-    fmt.Println("El gato maúlla.")
-}
+  type Gato struct {
+      Nombre string
+  }
 
-func hacerSonar(a Animal) {
-    a.HacerSonido()
-}
+  func (g *Gato) HacerSonido() {
+      fmt.Println("El gato maúlla.")
+  }
 
-func main() {
-    g := Gato{Nombre: "Misi"}
-    hacerSonar(&g) // Llama al método HacerSonido de Gato
-}
+  func hacerSonar(a Animal) {
+      a.HacerSonido()
+  }
 
-```
+  func main() {
+      g := Gato{Nombre: "Misi"}
+      hacerSonar(&g) // Llama al método HacerSonido de Gato
+  }
+
+  ```
 
 ---
 
 ## 8.4. Encapsulamiento
 
-- Modificadores de Acceso: En Go, la visibilidad de los campos y métodos se controla por la capitalización. Los identificadores que comienzan con una letra mayúscula son exportados (públicos) y accesibles desde otros paquetes, mientras que los que comienzan con una letra minúscula son privados (no exportados).
+- ### Modificadores de Acceso
 
-```go
-type Cuenta struct {
-    NumeroCuenta string // Campo público
-    saldo        int    // Campo privado
-}
+  En Go, la visibilidad de los campos y métodos se controla por la capitalización. Los identificadores que comienzan con una letra mayúscula son exportados (públicos) y accesibles desde otros paquetes, mientras que los que comienzan con una letra minúscula son privados (no exportados).
 
-func (c *Cuenta) Depositar(monto int) {
-    c.saldo += monto
-}
+  ```go
+  type Cuenta struct {
+      NumeroCuenta string // Campo público
+      saldo        int    // Campo privado
+  }
 
-func (c *Cuenta) ObtenerSaldo() int {
-    return c.saldo
-}
+  func (c *Cuenta) Depositar(monto int) {
+      c.saldo += monto
+  }
 
-```
+  func (c *Cuenta) ObtenerSaldo() int {
+      return c.saldo
+  }
+
+  ```
 
 ---
 
 ## 8.5. Abstracción
 
-- Interfaces: Las interfaces proporcionan una forma de definir comportamientos abstractos que pueden ser implementados por distintos tipos. Las interfaces en Go permiten definir métodos que los tipos deben implementar, proporcionando una forma de abstracción.
+- ### Interfaces (Abstracción)
 
-```go
-type Figura interface {
-    Area() float64
-}
+  Las interfaces proporcionan una forma de definir comportamientos abstractos que pueden ser implementados por distintos tipos. Las interfaces en Go permiten definir métodos que los tipos deben implementar, proporcionando una forma de abstracción.
 
-type Cuadrado struct {
-    Lado float64
-}
+  ```go
+  type Figura interface {
+      Area() float64
+  }
 
-func (c *Cuadrado) Area() float64 {
-    return c.Lado * c.Lado
-}
+  type Cuadrado struct {
+      Lado float64
+  }
 
-```
+  func (c *Cuadrado) Area() float64 {
+      return c.Lado * c.Lado
+  }
+
+  ```
 
 ---
 
 ## 8.6 Métodos
 
-Los métodos se definen sobre un tipo, que puede ser un struct o un tipo definido por el usuario.
+Los métodos se definen sobre un tipo, que puede ser un `struct` o un tipo definido por el usuario.
 
-- **Definición de Métodos:**
+- ### Definición de Métodos
 
   Un método en Go se define al asociar una función con un tipo específico. La sintaxis para definir un método es:
 
@@ -145,11 +158,11 @@ Los métodos se definen sobre un tipo, que puede ser un struct o un tipo definid
 
   ```
 
-  - receiver: Es una variable que actúa como el receptor del método. Puede ser un valor o un puntero al tipo. El receptor aparece entre paréntesis antes del nombre del método.
-  - ReceiverType: Es el tipo al que el método está asociado.
-  - MethodName: Es el nombre del método.
-  - parameters: Son los parámetros que recibe el método.
-  - returnType: Es el tipo de valor que devuelve el método.
+  - **receiver:** Es una variable que actúa como el receptor del método. Puede ser un valor o un puntero al tipo. El receptor aparece entre paréntesis antes del nombre del método.
+  - **ReceiverType:** Es el tipo al que el método está asociado.
+  - **MethodName:** Es el nombre del método.
+  - **parameters**: Son los parámetros que recibe el método.
+  - **returnType:** Es el tipo de valor que devuelve el método.
 
 ---
 
