--- a/Go/Documentación/9.Errores&Excepciones.md
+++ b/Go/Documentación/9.Errores&Excepciones.md
@@ -2,7 +2,7 @@
 
 ## 9.1. Manejo de Errores con if err != nil
 
-En Go, el manejo de errores se realiza utilizando la construcción if err != nil, en lugar de usar bloques try-catch como en otros lenguajes. Go fomenta el manejo explícito de errores, verificándolos inmediatamente después de realizar operaciones que puedan fallar.
+En Go, el manejo de errores se realiza utilizando la construcción `if err != nil`, en lugar de usar bloques try-catch como en otros lenguajes. Go fomenta el manejo explícito de errores, verificándolos inmediatamente después de realizar operaciones que puedan fallar.
 
 ```go
 if err != nil {
@@ -12,42 +12,42 @@ if err != nil {
 
 ```
 
-- **Patrón Común de Manejo de Errores:**
+- ### Patrón Común de Manejo de Errores
 
   - Retorna múltiples valores, uno de los cuales es de tipo error.
-  - El valor de error se compara con nil para verificar si ocurrió un error.
+  - El valor de error se compara con `nil` para verificar si ocurrió un error.
 
-  ```go
-  package main
+    ```go
+    package main
 
-  import (
-      "errors"
-      "fmt"
-  )
+    import (
+        "errors"
+        "fmt"
+    )
 
-  func divide(a, b int) (int, error) {
-      if b == 0 {
-          return 0, errors.New("división por cero")
-      }
-      return a / b, nil
-  }
+    func divide(a, b int) (int, error) {
+        if b == 0 {
+            return 0, errors.New("división por cero")
+        }
+        return a / b, nil
+    }
 
-  func main() {
-      result, err := divide(4, 0)
-      if err != nil {
-          fmt.Println("Error:", err)
-      } else {
-          fmt.Println("Resultado:", result)
-      }
-  }
+    func main() {
+        result, err := divide(4, 0)
+        if err != nil {
+            fmt.Println("Error:", err)
+        } else {
+            fmt.Println("Resultado:", result)
+        }
+    }
 
-  ```
+    ```
 
 ---
 
 ## 9.2. Lanzar Errores con panic
 
-Aunque Go no cuenta con un comando throw como en otros lenguajes, se puede usar panic para lanzar errores graves. El uso de panic está reservado para situaciones excepcionales y normalmente se evita su uso en errores controlables.
+Aunque Go no cuenta con un comando throw como en otros lenguajes, se puede usar `panic` para lanzar errores graves. El uso de `panic` está reservado para situaciones excepcionales y normalmente se evita su uso en errores controlables.
 
 ```go
 func checkPositive(value int) {
@@ -58,10 +58,10 @@ func checkPositive(value int) {
 
 ```
 
-- **Uso de panic:**
+### Uso de panic
 
-  - Detiene la ejecución normal del programa.
-  - Se utiliza cuando no es posible manejar el error localmente.
+- Detiene la ejecución normal del programa.
+- Se utiliza cuando no es posible manejar el error localmente.
 
   ```go
   func main() {
@@ -75,7 +75,7 @@ func checkPositive(value int) {
 
 ## 9.3. Uso de defer como finally
 
-Go no tiene un bloque finally, pero se puede replicar su comportamiento con defer, que asegura que un bloque de código se ejecute al final de la ejecución de la función, independientemente de si ocurrió un error o no.
+Go no tiene un bloque finally, pero se puede replicar su comportamiento con `defer`, que asegura que un bloque de código se ejecute al final de la ejecución de la función, independientemente de si ocurrió un error o no.
 
 ```go
 func readFile() {
@@ -89,7 +89,7 @@ func readFile() {
 
 ```
 
-- **Comportamiento de defer:**
+- **Comportamiento de defer**
 
   - Los bloques de código defer se ejecutan en orden inverso.
   - Asegura la liberación de recursos como archivos o conexiones de red.
@@ -98,25 +98,29 @@ func readFile() {
 
 ## 9.4. Errores en Tiempo de Compilación vs. Tiempo de Ejecución
 
-Errores en Tiempo de Compilación: Son aquellos detectados por el compilador antes de ejecutar el programa, como errores de sintaxis, tipos incompatibles o referencias a variables no definidas.
+- ### Errores en Tiempo de Compilación
 
-- Ejemplo de error de compilación:
+  Son aquellos detectados por el compilador antes de ejecutar el programa, como errores de sintaxis, tipos incompatibles o referencias a variables no definidas.
 
-```go
-var x int = "texto"  // Error, tipo incorrecto
+  - **Ejemplo de error de compilación:**
 
-```
+    ```go
+    var x int = "texto"  // Error, tipo incorrecto
 
-- **Errores en Tiempo de Ejecución:** Ocurren mientras el programa está en ejecución, como la división por cero o el acceso a un valor nulo.
+    ```
 
-  - Ejemplo de error en tiempo de ejecución:
+- ### Errores en Tiempo de Ejecución
 
-  ```go
-  func divide(a, b int) int {
-      return a / b // Causará pánico si b es 0
-  }
+  Ocurren mientras el programa está en ejecución, como la división por cero o el acceso a un valor nulo.
 
-  ```
+  - **Ejemplo de error en tiempo de ejecución:**
+
+    ```go
+    func divide(a, b int) int {
+        return a / b // Causará pánico si b es 0
+    }
+
+    ```
 
 ---
 
@@ -145,10 +149,10 @@ func main() {
 
 ## 9.6. Uso de os.Exit para Código de Salida
 
-El código de salida en Go se puede controlar utilizando la función os.Exit(). Esto permite definir si la ejecución del programa fue exitosa o si hubo un error.
+El código de salida en Go se puede controlar utilizando la función `os.Exit()`. Esto permite definir si la ejecución del programa fue exitosa o si hubo un error.
 
-- Código de Salida 0: Indica una ejecución exitosa.
-- Códigos diferentes de 0: Indican algún tipo de error.
+- **Código de Salida 0:** Indica una ejecución exitosa.
+- **Códigos diferentes de 0:** Indican algún tipo de error.
 
 ```go
 package main
@@ -177,7 +181,7 @@ func runApp() error {
 
 ## 9.7. Manejo de Pánico y Recuperación (panic y recover)
 
-recover() es una función que se utiliza para recuperar un programa de un estado de pánico, permitiendo que la ejecución continúe de forma controlada.
+`recover()` es una función que se utiliza para recuperar un programa de un estado de pánico, permitiendo que la ejecución continúe de forma controlada.
 
 ```go
 package main
@@ -210,39 +214,39 @@ func main() {
 
 ## 9.8. Error Wrapping y Unwrapping en Go
 
-Go permite "envolver" (wrap) errores utilizando el paquete estándar fmt o el paquete errors. Esto es útil para agregar contexto adicional a un error sin perder el error original.
+Go permite "envolver" (wrap) errores utilizando el paquete estándar `fmt` o el paquete errors. Esto es útil para agregar contexto adicional a un error sin perder el error original.
 
-- **Wrapping de Errores:**
+### Wrapping de Errores
 
-  Puedes envolver errores usando fmt.Errorf() con el formato %w, que permite envolver un error existente con un nuevo mensaje contextual.
+Puedes envolver errores usando `fmt.Errorf()` con el formato `%w`, que permite envolver un error existente con un nuevo mensaje contextual.
 
-  ```go
-  package main
+```go
+package main
 
-  import (
-      "fmt"
-      "errors"
-  )
+import (
+    "fmt"
+    "errors"
+)
 
-  func readFile() error {
-      err := errors.New("archivo no encontrado")
-      return fmt.Errorf("error leyendo archivo: %w", err) // Wrap del error original
-  }
+func readFile() error {
+    err := errors.New("archivo no encontrado")
+    return fmt.Errorf("error leyendo archivo: %w", err) // Wrap del error original
+}
 
-  func main() {
-      err := readFile()
-      if err != nil {
-          fmt.Println("Error:", err)
-      }
-  }
+func main() {
+    err := readFile()
+    if err != nil {
+        fmt.Println("Error:", err)
+    }
+}
 
-  ```
+```
 
-- **Unwrapping de Errores:**
+### Unwrapping de Errores
 
-  Para "desenvolver" (unwrap) un error envuelto y acceder al error original, puedes usar errors.Unwrap() o las funciones errors.Is() y errors.As() para comparar y trabajar con errores envueltos.
+Para "desenvolver" (unwrap) un error envuelto y acceder al error original, puedes usar `errors.Unwrap()` o las funciones `errors.Is()` y `errors.As()` para comparar y trabajar con errores envueltos.
 
-  - errors.Unwrap: Recupera el error original envuelto.
+- **`errors.Unwrap`:** Recupera el error original envuelto.
 
   ```go
   package main
@@ -262,7 +266,7 @@ Go permite "envolver" (wrap) errores utilizando el paquete estándar fmt o el pa
 
   ```
 
-  - errors.Is: Compara el error envuelto con un error específico, útil para manejar errores específicos de manera más detallada.
+- **`errors.Is`:** Compara el error envuelto con un error específico, útil para manejar errores específicos de manera más detallada.
 
   ```go
   package main
@@ -290,7 +294,7 @@ Go permite "envolver" (wrap) errores utilizando el paquete estándar fmt o el pa
 
   ```
 
-  - errors.As: Convierte el error envuelto en un tipo de error específico, permitiendo un manejo más detallado de errores personalizados.
+- **`errors.As`:** Convierte el error envuelto en un tipo de error específico, permitiendo un manejo más detallado de errores personalizados.
 
   ```go
   package main
