--- a/Go/Documentación/11.Concurrencia&Paralelismo.md
+++ b/Go/Documentación/11.Concurrencia&Paralelismo.md
@@ -6,9 +6,9 @@ Go ofrece un potente soporte para concurrencia y paralelismo mediante herramient
 
 Las goroutines son la forma en que Go implementa la concurrencia. Son hilos livianos gestionados por el runtime de Go, y su creación es extremadamente eficiente comparada con los hilos del sistema operativo.
 
-- **Creación de Goroutines:**
+- ### Creación de Goroutines
 
-  Se pueden lanzar goroutines simplemente usando la palabra clave go antes de una función.
+  Se pueden lanzar goroutines simplemente usando la palabra clave `go` antes de una función.
 
   ```go
   package main
@@ -39,73 +39,75 @@ Las goroutines son la forma en que Go implementa la concurrencia. Son hilos livi
 
 En Go, los canales (channels) son la principal forma de sincronizar y compartir datos entre goroutines. Los canales permiten enviar y recibir valores de manera concurrente y segura.
 
-- **Tipos de Canales:**
+- ### Tipos de Canales
 
-  - Canales sin búfer: Estos canales bloquean tanto al receptor como al emisor hasta que el valor haya sido enviado y recibido. Son útiles para la sincronización directa entre dos goroutines.
+  - **Canales sin búfer:** Estos canales bloquean tanto al receptor como al emisor hasta que el valor haya sido enviado y recibido. Son útiles para la sincronización directa entre dos goroutines.
 
-  - Canales con búfer: Permiten enviar múltiples valores antes de que el receptor tenga que leerlos. El búfer ayuda a desacoplar el ritmo de producción y consumo.
+  - **Canales con búfer:** Permiten enviar múltiples valores antes de que el receptor tenga que leerlos. El búfer ayuda a desacoplar el ritmo de producción y consumo.
 
-- **Creación de Canales:**
+- ### Creación de Canales
 
-  Se crean usando make, especificando el tipo de datos que pasarán a través del canal.
+  Se crean usando `make`, especificando el tipo de datos que pasarán a través del canal.
 
   ```go
   ch := make(chan int)       // Canal sin búfer
   chBuffered := make(chan int, 10) // Canal con búfer de tamaño 10
   ```
 
-  - Ejemplo de Canal Sin Búfer
+  - **Ejemplo de Canal Sin Búfer**
+
     El envío de un valor en el canal bloquea al emisor hasta que otro goroutine lo reciba.
 
-  ```go
-  package main
+    ```go
+    package main
 
-  import "fmt"
+    import "fmt"
 
-  func sendMessage(ch chan string) {
-      ch <- "¡Mensaje desde la goroutine!"
-  }
+    func sendMessage(ch chan string) {
+        ch <- "¡Mensaje desde la goroutine!"
+    }
 
-  func main() {
-      ch := make(chan string)
-      go sendMessage(ch)
+    func main() {
+        ch := make(chan string)
+        go sendMessage(ch)
 
-      message := <-ch
-      fmt.Println(message)
-  }
+        message := <-ch
+        fmt.Println(message)
+    }
 
-  ```
+    ```
 
-  - Canales con Búfer
+  - **Canales con Búfer**
+
     Los canales con búfer permiten que se almacenen varios valores antes de ser recibidos. Esto es útil cuando se desea que los productores y consumidores trabajen a diferentes velocidades.
 
-  ```go
-  package main
+    ```go
+    package main
 
-  import (
-      "fmt"
-      "time"
-  )
+    import (
+        "fmt"
+        "time"
+    )
 
-  func main() {
-      ch := make(chan string, 3)
+    func main() {
+        ch := make(chan string, 3)
 
-      ch <- "mensaje 1"
-      ch <- "mensaje 2"
-      ch <- "mensaje 3"
+        ch <- "mensaje 1"
+        ch <- "mensaje 2"
+        ch <- "mensaje 3"
 
-      fmt.Println(<-ch)
-      fmt.Println(<-ch)
-      fmt.Println(<-ch)
-  }
+        fmt.Println(<-ch)
+        fmt.Println(<-ch)
+        fmt.Println(<-ch)
+    }
 
-  ```
+    ```
 
 ---
 
 ## 1.3. Uso de sync.WaitGroup
 
-El paquete sync proporciona WaitGroup para sincronizar goroutines. Un WaitGroup espera que un conjunto de goroutines terminen su ejecución. Es útil para asegurarse de que todas las goroutines han finalizado antes de que el programa continúe.
+El paquete `sync` proporciona `WaitGroup` para sincronizar goroutines. Un WaitGroup espera que un conjunto de goroutines terminen su ejecución. Es útil para asegurarse de que todas las goroutines han finalizado antes de que el programa continúe.
 
 ```go
 package main
@@ -141,7 +143,7 @@ func main() {
 
 ## 11.4. Canales de Finalización (done)
 
-Un patrón común en Go es utilizar un canal llamado done para notificar cuando una goroutine ha finalizado su trabajo o cuando debe detenerse.
+Un patrón común en Go es utilizar un canal llamado `done` para notificar cuando una goroutine ha finalizado su trabajo o cuando debe detenerse.
 
 ```go
 package main
@@ -216,7 +218,7 @@ func main() {
 
 ## 11.6. Bloqueo y Sincronización
 
-Uso de Mutex para Evitar Condiciones de Carrera
+Uso de `Mutex` para Evitar Condiciones de Carrera
 
 ```go
 package main
@@ -256,7 +258,7 @@ func main() {
 
 ## 11.7. Procesos Paralelos
 
-Go utiliza múltiples threads del sistema operativo, y mediante la función runtime.GOMAXPROCS() puedes definir cuántos núcleos utilizará el programa para ejecutar goroutines de forma paralela.
+Go utiliza múltiples threads del sistema operativo, y mediante la función `runtime.GOMAXPROCS()` puedes definir cuántos núcleos utilizará el programa para ejecutar goroutines de forma paralela.
 
 ```go
 package main
@@ -292,7 +294,7 @@ func main() {
 
 El paquete context permite manejar la cancelación de operaciones, establecer tiempos de espera y pasar valores a través de goroutines.
 
-- **Creación y Uso del Contexto:**
+- ### Creación y Uso del Contexto
 
   El contexto se utiliza para controlar la vida útil de operaciones concurrentes.
 
@@ -325,7 +327,7 @@ El paquete context permite manejar la cancelación de operaciones, establecer ti
 
   ```
 
-- **Contextos Anidados y Valores:**
+- ### Contextos Anidados y Valores
 
   El contexto puede transportar valores a través de las goroutines y puede ser anidado para transmitir datos a lo largo de una cadena de operaciones.
 
@@ -371,121 +373,121 @@ func main() {
 
 ```
 
-- Para evitar condiciones de carrera, puedes utilizar canales o un mutex:
+- **Evitar condiciones de carrera:**
 
-  - Canales: Evitan la compartición de memoria comunicando datos entre goroutines.
-  - Mutex (mutual exclusion): Permiten bloquear el acceso a una sección crítica para que solo una goroutine pueda acceder a la vez.
+  - **Canales:** Evitan la compartición de memoria comunicando datos entre goroutines.
+  - **`Mutex` (mutual exclusion):** Permiten bloquear el acceso a una sección crítica para que solo una goroutine pueda acceder a la vez.
 
-- Deadlocks ocurren cuando dos o más goroutines se bloquean mutuamente esperando que el otro libere un recurso, lo que detiene la ejecución indefinidamente.
+Deadlocks ocurren cuando dos o más goroutines se bloquean mutuamente esperando que el otro libere un recurso, lo que detiene la ejecución indefinidamente.
 
-  - Para evitar deadlocks:
+- **Para evitar deadlocks**:
 
-    - Asegúrate de que las goroutines no se bloqueen mutuamente.
-    - Ordena adecuadamente las operaciones de bloqueo y liberación de recursos.
+  - Asegúrate de que las goroutines no se bloqueen mutuamente.
+  - Ordena adecuadamente las operaciones de bloqueo y liberación de recursos.
 
 ---
 
 ## 11.10. Patrones de Concurrencia
 
-- **Worker Pool Pattern:**
+- ### Worker Pool Pattern
 
   Un worker pool es un patrón que consiste en tener un conjunto fijo de "workers" (goroutines) que procesan tareas de una cola (canal). Este patrón es útil para limitar el número de goroutines concurrentes y controlar la carga de trabajo.
 
-  - Ventajas:
+  - **Ventajas:**
 
-    - Control sobre el número de goroutines.
-    - Mejora el uso de recursos.
-    - Evita sobrecargar el sistema con demasiadas goroutines.
+  - Control sobre el número de goroutines.
+  - Mejora el uso de recursos.
+  - Evita sobrecargar el sistema con demasiadas goroutines.
 
-```go
-package main
+  ```go
+  package main
 
-import (
- "fmt"
- "time"
-)
+  import (
+  "fmt"
+  "time"
+  )
 
-func worker(id int, jobs <-chan int, results chan<- int) {
- for j := range jobs {
+  func worker(id int, jobs <-chan int, results chan<- int) {
+  for j := range jobs {
   fmt.Printf("Worker %d processing job %d\n", id, j)
   time.Sleep(time.Second) // Simula el trabajo
   results <- j * 2
- }
-}
+  }
+  }
 
-func main() {
- jobs := make(chan int, 100)
- results := make(chan int, 100)
+  func main() {
+  jobs := make(chan int, 100)
+  results := make(chan int, 100)
 
- // Creación de 3 workers
- for w := 1; w <= 3; w++ {
+  // Creación de 3 workers
+  for w := 1; w <= 3; w++ {
   go worker(w, jobs, results)
- }
+  }
 
- // Enviar 9 trabajos al canal
- for j := 1; j <= 9; j++ {
+  // Enviar 9 trabajos al canal
+  for j := 1; j <= 9; j++ {
   jobs <- j
- }
- close(jobs)
+  }
+  close(jobs)
 
- // Recibir resultados
- for a := 1; a <= 9; a++ {
+  // Recibir resultados
+  for a := 1; a <= 9; a++ {
   fmt.Println(<-results)
- }
-}
+  }
+  }
 
-```
+  ```
 
-En este ejemplo, hay 3 workers que procesan 9 trabajos. Los trabajos son enviados al canal jobs y los resultados son recibidos en el canal results.
+  En este ejemplo, hay 3 workers que procesan 9 trabajos. Los trabajos son enviados al canal jobs y los resultados son recibidos en el canal results.
 
-- **Fan-In/Fan-Out Pattern:**
+- ### Fan-In/Fan-Out Pattern
 
-  - El patrón Fan-In/Fan-Out se utiliza para:
+  - **El patrón Fan-In/Fan-Out se utiliza para:**
 
-    - Fan-Out: Descomponer una tarea en múltiples subtareas ejecutadas por goroutines.
-    - Fan-In: Recolectar los resultados de esas goroutines en un solo canal.
+    - **Fan-Out:** Descomponer una tarea en múltiples subtareas ejecutadas por goroutines.
+    - **Fan-In:** Recolectar los resultados de esas goroutines en un solo canal.
     - Fan-Out distribuye el trabajo a varias goroutines para que se ejecute en paralelo, mientras que Fan-In combina los resultados de esas goroutines.
 
-```go
-package main
+  ```go
+  package main
 
-import (
- "fmt"
- "time"
-)
+  import (
+   "fmt"
+   "time"
+  )
 
-// Fan-Out: Las goroutines procesan múltiples tareas
-func worker(id int, jobs <-chan int, results chan<- int) {
- for j := range jobs {
-  fmt.Printf("Worker %d processing job %d\n", id, j)
-  time.Sleep(time.Second) // Simula trabajo
-  results <- j * 2
- }
-}
+  // Fan-Out: Las goroutines procesan múltiples tareas
+  func worker(id int, jobs <-chan int, results chan<- int) {
+   for j := range jobs {
+    fmt.Printf("Worker %d processing job %d\n", id, j)
+    time.Sleep(time.Second) // Simula trabajo
+    results <- j * 2
+   }
+  }
 
-// Fan-In: Recolectar resultados
-func main() {
- jobs := make(chan int, 10)
- results := make(chan int, 10)
+  // Fan-In: Recolectar resultados
+  func main() {
+   jobs := make(chan int, 10)
+   results := make(chan int, 10)
 
- // Fan-Out: Lanzar 3 workers que procesarán los trabajos
- for w := 1; w <= 3; w++ {
-  go worker(w, jobs, results)
- }
+   // Fan-Out: Lanzar 3 workers que procesarán los trabajos
+   for w := 1; w <= 3; w++ {
+    go worker(w, jobs, results)
+   }
 
- // Enviar 5 trabajos
- for j := 1; j <= 5; j++ {
-  jobs <- j
- }
- close(jobs)
+   // Enviar 5 trabajos
+   for j := 1; j <= 5; j++ {
+    jobs <- j
+   }
+   close(jobs)
 
- // Fan-In: Recolectar los resultados
- for a := 1; a <= 5; a++ {
-  result := <-results
-  fmt.Println("Resultado:", result)
- }
-}
+   // Fan-In: Recolectar los resultados
+   for a := 1; a <= 5; a++ {
+    result := <-results
+    fmt.Println("Resultado:", result)
+   }
+  }
 
-```
+  ```
 
-Fan-Out ocurre cuando varios workers están ejecutando tareas en paralelo. Fan-In sucede cuando los resultados de esas goroutines se combinan en el canal results.
+  Fan-Out ocurre cuando varios workers están ejecutando tareas en paralelo. Fan-In sucede cuando los resultados de esas goroutines se combinan en el canal results.
